--- a/_posts/Coding_Test/Algorithm_Test/2023-01-13-(수업)최소 비용의 경로를 찾아라.md
+++ b/_posts/Coding_Test/Algorithm_Test/2023-01-13-(수업)최소 비용의 경로를 찾아라.md
@@ -1,5 +1,5 @@
 ---
-title:  "[수업]Interesting Gain"
+title:  "[수업]최소 비용의 경로를 찾아라"
 categories : [AlgorithmTest]
 tag : [백준, 프로그래머스, 알고리즘 문제풀이]
 toc: true
@@ -14,18 +14,22 @@ typora-root-url: ../../..
 
 ## 문제
 
-![screen captures](/images/2023-01-08-(수업)Interesting Gain/5e9b4a8c-e4e1-4465-9b42-da4ebc9484b6.png)
+![screen captures](/images/2023-01-13-(수업)최소 비용의 경로를 찾아라/7b4c7bf7-3708-4604-964d-e7be26871f19.png)
 
-![screen captures](/images/2023-01-08-(수업)Interesting Gain/1c9fb860-ac88-490a-ab1f-2717e71a2e80.png)
+![screen captures](/images/2023-01-13-(수업)최소 비용의 경로를 찾아라/e7bff70e-27e3-4638-afc3-baaa1b99eaa3.png)
 
 <br>
 
 ## 풀이
 
-이 문제는 문제만 잘 이해했다면, 정말 간단한 문제이다.
+DP 문제이며, 격자 문제 관련해서 따로 개념 정리한 것이 있으니 그것을 보고 참고하자.
 
-문제를 잘 해석해보면, 최소2개와 최대2개의 수만 잘 가져오면 된다는걸 알 수 있다.
+현재(i,j)위치에 오는 경로는 왼쪽, 위밖에 없다. 
 
-따라서 전체 수를 정렬해서 맨 뒤 2개 맨 앞 2개를 가져온다.   
-즉, 최소2, 최대2개로 계산하면 끝(매우 간단한 문제)
+* **따라서 min((i-1,j), (i,j-1))를 현재 (i,j)위치에 더하면 된다**
+
+추가 조건으로 동일 왼쪽,위 값이면 오른쪽경로 이용하라했으니 위에꺼를 택해야 한다.   
+=> 만약 아래쪽경로 이용하라했으면? 왼쪽꺼를 택해야 한다.
+
+경로는 역추적을 통해서 하면 된다.(비용을 빼가면서 올바른 경로를 찾아가면 됨)
 
