--- a/_posts/Coding_Test/Algorithm_Test/2023-01-12-(수업)Bitmap.md
+++ b/_posts/Coding_Test/Algorithm_Test/2023-01-12-(수업)Bitmap.md
@@ -1,5 +1,5 @@
 ---
-title:  "[수업]Interesting Gain"
+title:  "[수업]Bitmap"
 categories : [AlgorithmTest]
 tag : [백준, 프로그래머스, 알고리즘 문제풀이]
 toc: true
@@ -14,18 +14,106 @@ typora-root-url: ../../..
 
 ## 문제
 
-![screen captures](/images/2023-01-08-(수업)Interesting Gain/5e9b4a8c-e4e1-4465-9b42-da4ebc9484b6.png)
+![screen captures](/images/2023-01-12-(수업)Bitmap/4325a102-2853-47c0-89a6-921b12735ade.png)
 
-![screen captures](/images/2023-01-08-(수업)Interesting Gain/1c9fb860-ac88-490a-ab1f-2717e71a2e80.png)
+![screen captures](/images/2023-01-12-(수업)Bitmap/72ec904b-dc57-4b49-be27-e559b7d32ade.png)
 
 <br>
 
 ## 풀이
 
-이 문제는 문제만 잘 이해했다면, 정말 간단한 문제이다.
+BtoD 는 압축이고, DtoB는 푸는것인데, 이 두 함수를 만들어야 한다. 
 
-문제를 잘 해석해보면, 최소2개와 최대2개의 수만 잘 가져오면 된다는걸 알 수 있다.
+손으로 풀어보고, 원리를 이해할것.
 
-따라서 전체 수를 정렬해서 맨 뒤 2개 맨 앞 2개를 가져온다.   
-즉, 최소2, 최대2개로 계산하면 끝(매우 간단한 문제)
 
+
+<1. B to D 손으로 풀어본 것>
+
+입력
+
+B 3 4 -> 형식과 치수제공   
+001000011011 -> 비트맵
+
+출력  
+
+D 3 4   
+D0D1001D101
+
+\- 입력 B
+
+B   
+0 0 1 0   
+0 0 0 1   
+1 0 1 1
+
+\- 출력과정 D
+
+D   
+0 0 1 0   
+0 0 0 1   
+1 0 1 1  
+ => D
+
+1번째 분기
+
+0 0    1 0   
+0 0    0 1
+
+1 0    1 1   
+=> 0 D
+
+2번째 분기
+
+​        1   0
+
+​        0   1
+
+1 0    1 1   
+=> 1 0 0 1 D
+
+3번째 분기
+
+1    0    1 1   
+=> 1 0 1
+
+결론 : BtoD = D0D1001D101
+
+
+
+<2. D to B 손으로 풀어본 것>
+
+입력 :    
+D 2 3   
+DD10111
+
+출력 :   
+1 0 1 1 1 1
+
+0 0 0   
+0 0 0
+
+\- 입력 D
+
+D 1번   
+0 0   0
+
+0 0   0
+
+D 2번   
+0   0   0
+
+0 0     0
+
+삽입   
+1   0   1
+
+1 1     1
+
+\- 출력과정 B
+
+결론 : 1 0 1 1 1 1
+
+따라서 재귀를 왼쪽 상단, 오른쪽 상단, 왼쪽 하단, 오른쪽 하단 으로 4부분으로 나눠서 해주는 형식으로 코드를 작성해야 한다.
+
+* 위 과정만 이해한다면 충분히 구현은 어렵지 않다.(4부분 재귀로)
