--- a/_posts/Coding_Test/Algorithm_Test/2023-01-19-(수업)Card Game.md
+++ b/_posts/Coding_Test/Algorithm_Test/2023-01-19-(수업)Card Game.md
@@ -18,7 +18,7 @@ typora-root-url: ../../..
 
 결국 `DP`같은 형태로 풀게 될 것이다.
 
-`DP` 관련해서 정리해둔 게시글이 있기 때문에 참고할 것.
+`DP, NIM` 관련해서 정리해둔 게시글이 있기 때문에 참고할 것.
 
 <br>
 
