--- a/_posts/Coding_Test/Baekjoon_Test/2023-01-28-(백준)코테 준비 시작(Intro).md
+++ b/_posts/Coding_Test/Baekjoon_Test/2023-01-28-(백준)코테 준비 시작(Intro).md
@@ -1,6 +1,6 @@
 ---
 title:  "[백준]코테 준비 Intro.."
-categories : [BaekjoonTest]
+categories : [BaekjoonTest, Baekjoon]
 tag : [백준, 프로그래머스, 알고리즘 문제풀이]
 toc: true
 toc_sticky: true
