--- a/_posts/Coding_Test/Baekjoon_Test/2023-03-11-(C++)1, 2, 3 더하기 - 백준9095.md
+++ b/_posts/Coding_Test/Baekjoon_Test/2023-03-11-(C++)1, 2, 3 더하기 - 백준9095.md
@@ -1,5 +1,5 @@
 ---
-title:  "[C++]2xn 타일링 2 - 백준11727"
+title:  "[C++]1, 2, 3 더하기 - 백준9095"
 categories : [BaekjoonTest]
 tag : [백준, 프로그래머스, 알고리즘 문제풀이]
 toc: true
@@ -14,7 +14,7 @@ typora-root-url: ../../..
 
 ## 문제
 
-* **[2xn 타일링 2(백준11727)](https://www.acmicpc.net/problem/11727)**
+* **[1, 2, 3 더하기(백준9095)](https://www.acmicpc.net/problem/9095)**
 
 <br>
 
@@ -22,31 +22,45 @@ typora-root-url: ../../..
 
 **문제 해석을 하자면,**
 
-* 이전 '2xn 타일링' 문제에서` 2x2 타일` 이 추가된 문제이다.
-  * 이전에 풀이한 게시글 참고
+* 입력받은 N을 1, 2, 3의 합으로 나타내는 총 방법의 수를 구하는 문제
+* 무작정 풀기는 복잡도가 크기 때문에 DP로 풀기
 
 
 
 
 **풀이**
 
-* N번째 블럭에 `'ㅣ', 'ㅡ', '2x2타일'` 을 붙일 수 있는 경우들을 생각해야함.
-  
+* 우선 손으로 풀어본다.
+
   ```
-  < N, 직사각형 방법 수 , 과정 >
-  1, 1				, 2x1 1개x1
-  2, 3				, 2x1 2개x1, 1x2 2개x1, 2x2 1개x1
-  3, dp[2]값 뒤에 'ㅣ' 1개 추가 가능, dp[1]값 뒤에 'ㅡ' 2개 추가 가능, dp[1]값 뒤에 '2x2타일' 1개 추가 가능 => 즉, dp[3]=dp[1]*2+dp[2]
-  => 이 방식을 계속 뒤에도 적용
-  4, ...
+  < N, 방법수,		  ,과정 >
+  1,  1				,1
+  2,  2				,1+1,2
+  3,	4				,1+1+1, 1+2x2, 3
+  4,  7				,1+1+1+1, 1+1+2x3, 2+2, 1+3x2
+  5,	13				,1+1+1+1+1, 1+1+1+2x4, 1+1+3x3, 1+2+2x3, 2+3x2
+  6,	?				,1+1+1+1+1+1, 1+1+1+1+2x5,,,
   ```
-  
-  * 위의 과정 중에서 N=3일 때의 과정을 보면 점화식을 유추할 수 있다.
-    * N=3때
-      * N-1 블럭 뒤에 'ㅣ' 1개 추가 가능
-      * N-2 블럭 뒤에 'ㅡ' 2개 추가 가능
-      * N-1 블럭 뒤에 '2x2타일' 1개 추가 가능 
-      * 따라서, `dp[3]=dp[1]*2+dp[2]`
+
+  * DP로 풀것이기 때문에 점화식과 초기값을 선택한다.
+    * 초기값은 `dpArr[1] = 1, dpArr[2] = 2, dpArr[3] = 4`
+    * 점화식은 위에서 규칙을 찾아내야 한다.
+      * N=4의 경우 `1+2+4 = 7` 이 나오고,
+      * N=5의 경우 `2+4+7 = 13` 이 나온다.
+      * 따라서 점화식은 `dpArr[i] = dpArr[i-3]+dpArr[i-2]+dpArr[i-1]`
+
+* 문제는 위 점화식의 규칙을 찾았지만 정확한 원리를 이해하지 못해서 구글링을 해보았다 ㅠㅠ
+
+  * N=10의 경우를 예로 들어보겠다.
+  * 1,2,3을 우린 더할 수 있으므로 이 수들을 더할 수 있는 경우들을 생각 해야한다.
+    * 즉, 7,8,9에 7+3, 8+2, 9+1 처럼 1,2,3을 더할 수 있는 경우들이라는걸 이해해야 한다.
+    * 그리고 7,8,9 에서 구한 방법의 요소들은 당연히 서로 다 다른건 자명하다.
+    * 또한, 7+3의 의미는 7의 총 방법의 수에 3을 더한게 아니라 기존 7의 방법의 요소들에 +3을 더한것 뿐이다.
+    * 그래서 방법수가 증가한게아니라 7에서의 총 방법의 수를 사용해야한다는 것이다.
+      * (7,8,9전부 마찬가지)
+
+    * 따라서 결론은 `10방법 수 = 7방법 수 + 8방법 수 + 9방법 수` 의 점화식을 구할 수 있다.
+
 
 
 
@@ -54,25 +68,29 @@ typora-root-url: ../../..
 #include <iostream>
 using namespace std;
 
-int dpArr[1005];
+int inputNum;
+int dpArr[15];
 
-int n;
+int t, T;
 int i, j, k;
 
 int main() {
 	// input
-	cin >> n;
+	cin >> T;
 
 	// init
 	dpArr[1] = 1;
-	dpArr[2] = 3;
+	dpArr[2] = 2;
+	dpArr[3] = 4;
 
 	// run
-	for (i = 3; i <= n; i++)
-		dpArr[i] = (dpArr[i - 1] + dpArr[i - 2]*2) % 10007;
+	for (i = 4; i < 11; i++) dpArr[i] = dpArr[i - 3] + dpArr[i - 2] + dpArr[i - 1];
 
 	// output
-	cout << dpArr[n];
+	for (t = 0; t < T; t++) {
+		cin >> inputNum;
+		cout << dpArr[inputNum] << '\n';
+	}
 
 	return 0;
 }
@@ -82,4 +100,6 @@ int main() {
 
 ## 느낀점
 
-**'2xn 타일링' 문제를 풀었다면 전혀 어렵지 않은 문제였다.**
+구글링을 안해도 풀었을 문제지만, 정확히 이해를 하지 못하고 넘어갈 뻔 했다.
+
+아직까지는 DP 문제들의 규칙(점화식) 을 찾아내는게 어려운 것 같다.
