--- a/_posts/Coding_Test/Baekjoon_Test/2023-03-25-(C++)오르막 수 - 백준11057.md
+++ b/_posts/Coding_Test/Baekjoon_Test/2023-03-25-(C++)오르막 수 - 백준11057.md
@@ -22,51 +22,66 @@ typora-root-url: ../../..
 
 **문제 해석을 하자면,**
 
-* 우리의 크기는 2*N 배열 형태이다.
-* 즉, 가로 N개... 세로는 2개!! 자세한건 문제에서 그림 참고
-* 마지막엔 나머지 값으로 출력할것
+* 수의 길이 N을 입력으로 주었을 때, 오름차순을 이루는 수의 개수를 구하는 문제이다.
 
 
 
 **풀이**
 
-- **처음엔 개수로 풀어보려고 했다..**
+- 바로 규칙을 찾아보려고 한다.
 
   ```
-  N=4,	행*열,	개수
-  1  ,	1*2,	1+2= 3
-  2  ,	2*2,	1+4+2= 7
-  3  ,	3*2,	1+6+(4+2+2)+2= 17
-  4  ,	4*2,	1+8+(6+4+4+2+2)+(4+8)+2= 41
+  N=1	0~9		10개
+  N=2	00~99	55개
+  N=3	000~999	220개
   ```
 
-  * 이처럼 개수에서 규칙을 찾으려고 했는데 실패했다.. 그래서 구글링 ㅠ
+- 자세히 구하는 과정을 나타내야 규칙이 보일듯 하다.
 
-- **개수가 아닌 해당 행,열 자리에 사자를 배치하느냐에 중점을 뒀어야 했다!!**
+  ```
+  N=1, 총 개수 : 10개
+  0 1 2 ... 9 => 10개
+  
+  N=2, 총 개수 : 55개(10+9+8+...+1)
+  00 01 02 ... 09 => 10개
+  11 12 13 ... 19 => 9개
+  22 23 24 ... 29 => 8개
+  ... 88 89 => 2개
+  99 => 1개
+  
+  N=3, 총 개수 : 220개(이하동문)
+  000 001 002 003 ... 009 011 012 ... 019 022 023 024 ... 099 => 55개(이전값이 55였음)
+  111 112 113 ... 119 122 123 124 ... 199 => 45개(55-10)
+  222 223 224 ... 229 233 234 ... 299 => 36개(44-9)
+  333 ....................... 
+  999 => 1개
+  => 벌써 규칙이 보이기 시작함. 이전 값들 계산과정을 이용한거임.
+  => 다만, 코드 구현할땐 저렇게 빼기로 하지말고 덧셈으로 해결해줄 것!
+  => 빼기로 했다가 음수 나와서(나누기 때문에) 덧셈으로 해결하라는 것!
+  
+  N=4, 총 개수 : 생략
+  0000 0001 ... 0999 => 220개
+  1111 1112 ... 1999 => 220-55개 = 165
+  ...
+  9999 => 1개
+  ```
 
-  - 즉, `dp[n][i]` 로 정의하고 이 경우 n번째 행에 i방법의 동물을 놓는 경우의 수라고 가정하고 푼다.
-
-- 하나의 행에 칸 개수는 2개가 고정이다.
-
-- 따라서 하나의 행에 사자 배치 경우의 수는 'ox, xo, xx' 가 가능하다.(이것이 i방법)
-
-  - 'oo' 가 안되는 이유는 가로에 같이 배치 못한다고 했기 때문!
-
-- 그럼 세로에 같이 배치 못한다고 한건 어떻게 처리하나??
-
-  - 위 배치 경우들을 dp배열에 저장을 해나갈거기 때문에 이전 값을 활용한다.
-  - 즉, 이전 값에서 사자의 배치가 겹치는 부분은 피하면 된다.
-
-
+  * 계산 과정들을 dp배열에 저장해가면서 풀면 된다.
+  * 처음에는 백준 제출시 실패.. 원인이 뭔가 print를 찍어보니 N=8부터 계산 과정에 음수를 발견
+    * dp를 구하는 과정을 1 2 3 4 ... 10 이런식으로 덧셈 사용해서 구해나가야 하는데,  
+      10 9 8 ... 1 이런식으로 구했더니 계산 과정에서 뺄셈 사용때문에 음수 나오게됨.
+  * 따라서 덧셈 형식으로 수정해서 바로 해결
+    * `dpArr[i-1][0] ... dpArr[i-1][9]`  까지 순서대로 더해가면서 기록하면 됨!
 
 
 
 ```c++
-#include <iostream>
+#include<iostream>
 using namespace std;
-#define MAXMOD 9901;
+#define MAXMOD 10007;
 
-int dpArr[3][100005];
+
+int dpArr[1005][10];
 
 int N;
 int i, j, k;
@@ -74,28 +89,24 @@ int i, j, k;
 int main() {
 	// input
 	cin >> N;
+	
+	// init
+	for (i = 0; i < 10; i++) dpArr[1][i] = 1;
+	int temp = 0;
 
-	// init (N=1)
-	for (j = 0; j < 3; j++) dpArr[j][1] = 1;
-
-	// run (N>=2)
+	// run
 	for (i = 2; i <= N; i++) {
-		for (j = 0; j < 3; j++) {
-			if (j == 0) { // 'ox'
-				dpArr[j][i] = (dpArr[j + 1][i - 1] + dpArr[j + 2][i - 1]) % MAXMOD;
-			}
-			else if (j == 1) { // 'xo'
-				dpArr[j][i] = (dpArr[j + 1][i - 1] + dpArr[j - 1][i - 1]) % MAXMOD;
-			}
-			else if (j == 2) { // 'xx'
-				dpArr[j][i] = (dpArr[j][i - 1]+dpArr[j - 1][i - 1] + dpArr[j - 2][i - 1]) % MAXMOD;
-			}
+		temp = 0;
+		for (j = 0; j < 10; j++) {
+			temp = (temp + dpArr[i - 1][j]) % MAXMOD;
+			dpArr[i][j] = temp;
 		}
 	}
-
+	
 	// output
 	int result = 0;
-	for (j = 0; j < 3; j++) result = (result+dpArr[j][N])%MAXMOD;
+	for (i = 0; i < 10; i++) 
+		result = (result + dpArr[N][i]) % MAXMOD;
 	cout << result;
 
 	return 0;
@@ -106,7 +117,4 @@ int main() {
 
 ## 느낀점
 
-아쉽게 결국 구글링 한 문제..
-
-문제 접근만 잘했으면 쉽게 풀 수 있던 문제였다.  
-**이전에 푼 'RGB거리' 에서 푼 DP 방식과 거희 완벽히 동일했다.**
+생략
