--- a/_posts/Coding_Test/Baekjoon_Test/2023-03-26-(C++)스티커 - 백준9465.md
+++ b/_posts/Coding_Test/Baekjoon_Test/2023-03-26-(C++)스티커 - 백준9465.md
@@ -22,81 +22,118 @@ typora-root-url: ../../..
 
 **문제 해석을 하자면,**
 
-* 우리의 크기는 2*N 배열 형태이다.
-* 즉, 가로 N개... 세로는 2개!! 자세한건 문제에서 그림 참고
-* 마지막엔 나머지 값으로 출력할것
+* 입력으로 스티커의 점수를 줄건데, 해당 스티커는 바로 인접한 상하좌우의 스티커는 사용할 수 없다.
+* 이 조건을 지킨채로 스티커를 사용하는데 최대 점수를 구하는 문제이다.
 
 
 
 **풀이**
 
-- **처음엔 개수로 풀어보려고 했다..**
+* 아래 규칙을 이해하고나면 `dpArr[2][n], inputArr[2][n]` 로 배열이 선언된다는게 이해될것이다.
+
+* 바로 규칙을 찾아 보겠다.
 
   ```
-  N=4,	행*열,	개수
-  1  ,	1*2,	1+2= 3
-  2  ,	2*2,	1+4+2= 7
-  3  ,	3*2,	1+6+(4+2+2)+2= 17
-  4  ,	4*2,	1+8+(6+4+4+2+2)+(4+8)+2= 41
+  문제에서 input으로 스티커 점수가 아래로 들어왔을때,
+  50 10 100 20 40
+  30 50 70 10 60
+  
+  첫번째 열을 가져와보면 {50, 30} 이다. 둘 중에 한개 선택되었다 가정하고 보자면??
+  <50을 선택한 경우. 50부터 시작>
+  index:	    0, 1, 2           0, 1, 2        
+  input[0]:	50    100         50
+  input[1]:	   50         or        70
+  => 위에 50의 경우 선택가능한 스티커 경우(총 2경우)
+  
+  <30을 선택한 경우. 30부터 시작>
+  index:	    0, 1, 2           0, 1, 2        
+  input[0]:	   10                   100
+  input[1]:	30    70      or  30    
+  => 아래 30의 경우 선택가능한 스티커 경우(총 2경우)
+  
+  따라서 총 4가지 경우의 규칙이 있다는것을 알 수 있다.
+  그리고 각각 2가지 경우에서 둘 중 큰값이 dp 배열에 기록 될 것이다.
   ```
 
-  * 이처럼 개수에서 규칙을 찾으려고 했는데 실패했다.. 그래서 구글링 ㅠ
+* 아래 그림이 위에서 설명한 과정이므로 참고! ( 출처 : https://jdselectron.tistory.com/75 )
 
-- **개수가 아닌 해당 행,열 자리에 사자를 배치하느냐에 중점을 뒀어야 했다!!**
+  <img src=".\images\2023-03-26-(C++)스티커 - 백준9465\image-20230219002930493.png" alt="image-20230219002930493" style="zoom:80%;" />
 
-  - 즉, `dp[n][i]` 로 정의하고 이 경우 n번째 행에 i방법의 동물을 놓는 경우의 수라고 가정하고 푼다.
+* 규칙을 이해했다면, 점화식만 구하면 된다.
 
-- 하나의 행에 칸 개수는 2개가 고정이다.
+  * 초기값도 항상 같이 생각해줄 것
 
-- 따라서 하나의 행에 사자 배치 경우의 수는 'ox, xo, xx' 가 가능하다.(이것이 i방법)
+* 예로 위에서 처음 설명했던,
 
-  - 'oo' 가 안되는 이유는 가로에 같이 배치 못한다고 했기 때문!
+  ```
+  index:	    0, 1, 2           0, 1, 2        
+  input[0]:	50    100         50
+  input[1]:	   50         or        70
+  ```
 
-- 그럼 세로에 같이 배치 못한다고 한건 어떻게 처리하나??
+  * 이것을 예시로, `dp[0][2]` 을 구해보겠다(`dp[0][0..1]` 은 초기값 설정 했다고 가정)
+  * `input[0][2] = 100` 이다. 해당 자리 기준에서 위에서 설명한 규칙을 적용하면 2가지 경우가 있다. 
+    * `dp[1][1]` 자리와 `dp[1][0]` 자리에서 오는 경우이다. (찾은 규칙을 이해했으면 이것은 당연한 얘기)
+  * 따라서 `input[0][2] + max(dp[1][1], dp[1][0])` 이 `dp[0][2]` 값이 된다.
+    * `dp[1][2]` 까지 구해서 이 2개를 비교하면 최종 값을 얻을 수 있다.
 
-  - 위 배치 경우들을 dp배열에 저장을 해나갈거기 때문에 이전 값을 활용한다.
-  - 즉, 이전 값에서 사자의 배치가 겹치는 부분은 피하면 된다.
+* 점화식은
 
+  *  `dp[0][i] = input[0][i] + max(dp[1][i-1], dp[1][i-2])`
+  *  `dp[1][i] = input[1][i] + max(dp[0][i-1], dp[0][i-2])`
 
+* 최종값 식은`max(dp[0][N], dp[1][N])`
 
 
 
 ```c++
 #include <iostream>
 using namespace std;
-#define MAXMOD 9901;
 
-int dpArr[3][100005];
+int inputArr[2][100005];
+int dpArr[2][100005];
 
-int N;
-int i, j, k;
+int T, N;
+int i, j, k,t;
+int result;
+
 
 int main() {
 	// input
-	cin >> N;
+	cin >> T;
 
-	// init (N=1)
-	for (j = 0; j < 3; j++) dpArr[j][1] = 1;
+	// run
+	for (t = 0; t < T; t++) {
+		// input
+		cin >> N;
+		for (i = 0; i < 2; i++)
+			for (j = 0; j < N; j++)
+				cin >> inputArr[i][j];
 
-	// run (N>=2)
-	for (i = 2; i <= N; i++) {
-		for (j = 0; j < 3; j++) {
-			if (j == 0) { // 'ox'
-				dpArr[j][i] = (dpArr[j + 1][i - 1] + dpArr[j + 2][i - 1]) % MAXMOD;
-			}
-			else if (j == 1) { // 'xo'
-				dpArr[j][i] = (dpArr[j + 1][i - 1] + dpArr[j - 1][i - 1]) % MAXMOD;
-			}
-			else if (j == 2) { // 'xx'
-				dpArr[j][i] = (dpArr[j][i - 1]+dpArr[j - 1][i - 1] + dpArr[j - 2][i - 1]) % MAXMOD;
-			}
+		// init (N<=2)
+		dpArr[0][0] = inputArr[0][0];
+		dpArr[1][0] = inputArr[1][0];
+		dpArr[0][1] = inputArr[0][1]+inputArr[1][0];
+		dpArr[1][1] = inputArr[1][1]+inputArr[0][0];
+
+		// run (N>2)
+		for (i = 2; i < N; i++) {
+			dpArr[0][i] = inputArr[0][i] + max(dpArr[1][i - 1], dpArr[1][i - 2]);
+			dpArr[1][i] = inputArr[1][i] + max(dpArr[0][i - 1], dpArr[0][i - 2]);
+		}
+
+		// output
+		result = 0;
+		for (i = 0; i < 2; i++)
+			result = max(result, dpArr[i][N - 1]);
+		cout << result << '\n';
+
+		// init
+		for (i = 0; i <= N; i++) {
+			dpArr[0][i] = 0;
+			dpArr[1][i] = 0;
 		}
 	}
-
-	// output
-	int result = 0;
-	for (j = 0; j < 3; j++) result = (result+dpArr[j][N])%MAXMOD;
-	cout << result;
 
 	return 0;
 }
@@ -106,7 +143,4 @@ int main() {
 
 ## 느낀점
 
-아쉽게 결국 구글링 한 문제..
-
-문제 접근만 잘했으면 쉽게 풀 수 있던 문제였다.  
-**이전에 푼 'RGB거리' 에서 푼 DP 방식과 거희 완벽히 동일했다.**
+생략
