--- a/_posts/Coding_Test/Baekjoon_Test/2023-03-30-(C++)가장 긴 감소하는 부분 수열 - 백준11722.md
+++ b/_posts/Coding_Test/Baekjoon_Test/2023-03-30-(C++)가장 긴 감소하는 부분 수열 - 백준11722.md
@@ -22,30 +22,14 @@ typora-root-url: ../../..
 
 **문제 해석을 하자면,**
 
-* 직접 읽어볼 것.
+* '가장 큰 증가 부분 수열' 응용이기 때문에 풀이 게시글 참고!
 
 
 
 **풀이**
 
-* 바로 규칙을 찾아보겠다.
-
-  ```
-  	1,	2,	3,	4,	5
-  1	7
-  2	10	15
-  3	18	16	15
-  4	20	25	20	19
-  5	24	30	27	26	24
-  => 정답은 30
-  ```
-
-  * 입력 값 들어온 것을 정수 삼각형 규칙에 맞게 더해주는데 그 과정을 기록해 나간다.
-    * 다만, 더 했을때 겹치는 부분들이 있는데 그것은 둘중에 더 큰 값을 기록해나간다.
-
-  * `dp[505][505]` 로 선언하겠다.
-  * 초기값은 1개만 바로 적용 => `dp[1][1] = inputNum;`
-  * 점화식은 `dp[i][j] = max(dp[i-1][j-1], dp[i-1][j])`
+* 최대합이 아닌 길이를 기록해나가면 되고,
+* 증가 수열이 아닌 감소 수열을 판별해 나가면 된다.
 
 
 
@@ -54,8 +38,8 @@ typora-root-url: ../../..
 #include <iostream>
 using namespace std;
 
-int dpArr[505][505];
-int inputNum;
+int inputArr[1005];
+int dpArr[1005];
 
 int N;
 int i, j, k;
@@ -63,22 +47,31 @@ int i, j, k;
 int main() {
 	// input
 	cin >> N;
-	
-	// init
-	cin >> dpArr[1][1];
+	for (i = 0; i < N; i++) cin >> inputArr[i];
 
 	// run
-	for (i = 2; i<= N; i++) {
-		for (j = 1; j <= i; j++) {
-			cin >> inputNum;
+	for (i = 0; i < N; i++) {
+		// init
+		dpArr[i] = 1;
 
-			dpArr[i][j] = inputNum+max(dpArr[i - 1][j - 1], dpArr[i - 1][j]);
+		// run
+		for (j = 0; j < i; j++) {
+			// 감소 수열인지 먼저 판별
+			if (inputArr[i] < inputArr[j]) {
+				// 최대 길이인지 판별
+				if (dpArr[i] < dpArr[j] + 1) {
+					dpArr[i] = dpArr[j] + 1;
+				}
+			}
 		}
+
 	}
-	
+
 	// output
 	int result = 0;
-	for (j = 1; j <= N; j++) result = max(result, dpArr[N][j]);
+	for (i = 0; i < N; i++) {
+		result = max(result, dpArr[i]);
+	}
 	cout << result;
 
 	return 0;
