--- a/_posts/Coding_Test/Baekjoon_Test/2023-03-29-(C++)가장 큰 증가 부분 수열 - 백준11055.md
+++ b/_posts/Coding_Test/Baekjoon_Test/2023-03-29-(C++)가장 큰 증가 부분 수열 - 백준11055.md
@@ -28,24 +28,16 @@ typora-root-url: ../../..
 
 **풀이**
 
-* 바로 규칙을 찾아보겠다.
+* inputArr[N] 에 입력전부 받기, dpArr[N] 에 증가 수열 최대합 기록하기
+* 증가 수열 만족하려면? 
+  * `inputArr[i-1] < inputArr[i]` 를 만족해야 한다.
 
-  ```
-  	1,	2,	3,	4,	5
-  1	7
-  2	10	15
-  3	18	16	15
-  4	20	25	20	19
-  5	24	30	27	26	24
-  => 정답은 30
-  ```
+* 최대합을 만족하려면? 
+  * `dpArr[i] < dpArr[i-1] + inputArr[i]` 를 만족해야 한다.
+  * 참고로 dpArr[i] 초기값은 inputArr[i]로 설정.
+  * 증가 수열 아닐땐 iputArr[i] 로 설정되어야 하기 때문.
 
-  * 입력 값 들어온 것을 정수 삼각형 규칙에 맞게 더해주는데 그 과정을 기록해 나간다.
-    * 다만, 더 했을때 겹치는 부분들이 있는데 그것은 둘중에 더 큰 값을 기록해나간다.
-
-  * `dp[505][505]` 로 선언하겠다.
-  * 초기값은 1개만 바로 적용 => `dp[1][1] = inputNum;`
-  * 점화식은 `dp[i][j] = max(dp[i-1][j-1], dp[i-1][j])`
+* 마지막엔 dp배열 순회해서 제일 큰 값을 정답으로 출력.
 
 
 
@@ -54,8 +46,8 @@ typora-root-url: ../../..
 #include <iostream>
 using namespace std;
 
-int dpArr[505][505];
-int inputNum;
+int inputArr[1005];
+int dpArr[1005];
 
 int N;
 int i, j, k;
@@ -63,22 +55,31 @@ int i, j, k;
 int main() {
 	// input
 	cin >> N;
-	
-	// init
-	cin >> dpArr[1][1];
+	for (i = 0; i < N; i++) cin >> inputArr[i];
 
 	// run
-	for (i = 2; i<= N; i++) {
-		for (j = 1; j <= i; j++) {
-			cin >> inputNum;
+	for (i = 0; i < N; i++) {
+		// init
+		dpArr[i] = inputArr[i];
 
-			dpArr[i][j] = inputNum+max(dpArr[i - 1][j - 1], dpArr[i - 1][j]);
+		// run
+		for (j = 0; j < i; j++) {
+			// 증가 수열인지 먼저 판별
+			if (inputArr[i] > inputArr[j]) {
+				// 최대합인지 판별
+				if (dpArr[i] < dpArr[j] + inputArr[i]) {
+					dpArr[i] = dpArr[j] + inputArr[i];
+				}
+			}
 		}
+
 	}
 	
 	// output
 	int result = 0;
-	for (j = 1; j <= N; j++) result = max(result, dpArr[N][j]);
+	for (i = 0; i < N; i++) {
+		result = max(result, dpArr[i]);
+	}
 	cout << result;
 
 	return 0;
@@ -89,4 +90,4 @@ int main() {
 
 ## 느낀점
 
-생략
+생각한거랑 비슷한 흐름이였긴한데 구글링을 하긴 했다..!
