--- a/_posts/Coding_Test/Baekjoon_Concept/2023-02-01-(백준)알고리즘 기초1 - 문제 모음.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-02-01-(백준)알고리즘 기초1 - 문제 모음.md
@@ -26,14 +26,16 @@ typora-root-url: ../../..
 
 ### 200 - 자료구조 1
 
-- [스택](/_posts/Coding_Test/Baekjoon_Test/2023-01-29-(C)스택 - 백준10828.md)
-- [단어 뒤집기](/9093)
-- [괄호](/9012)
-- [스택 수열](/1874)
-- [에디터](/1406)
-- [큐](/10845)
-- [조세퍼스 문제](/1158)
-- [덱](/10866)
+- [스택](https://bh946.github.io/baekjoontest/(C++)%EC%8A%A4%ED%83%9D-%EB%B0%B1%EC%A4%8010828/)
+- [단어 뒤집기](https://bh946.github.io/baekjoontest/(C++)%EB%8B%A8%EC%96%B4-%EB%92%A4%EC%A7%91%EA%B8%B0-%EB%B0%B1%EC%A4%809093/)
+- [괄호](https://bh946.github.io/baekjoontest/(C++)%EA%B4%84%ED%98%B8-%EB%B0%B1%EC%A4%809012/)
+- [스택 수열](https://bh946.github.io/baekjoontest/(C++)%EC%8A%A4%ED%83%9D-%EC%88%98%EC%97%B4-%EB%B0%B1%EC%A4%801874/)
+- [에디터](https://bh946.github.io/baekjoontest/(C++)%EC%97%90%EB%94%94%ED%84%B0-%EB%B0%B1%EC%A4%801406/)
+  - 복습하기
+
+- [큐](https://bh946.github.io/baekjoontest/(C++)%ED%81%90-%EB%B0%B1%EC%A4%8010845/)
+- [조세퍼스 문제](https://bh946.github.io/baekjoontest/(C++)%EC%9A%94%EC%84%B8%ED%91%B8%EC%8A%A4-%EB%AC%B8%EC%A0%9C-%EB%B0%B1%EC%A4%801158/)
+- [덱](https://bh946.github.io/baekjoontest/(C++)%EB%8D%B1-%EB%B0%B1%EC%A4%8010866/)
 
 
 
@@ -41,10 +43,14 @@ typora-root-url: ../../..
 
 ### 201 - 자료구조 1 (연습)
 
-- [단어 뒤집기 2](/17413)
-- [쇠막대기](/10799)
-- [오큰수](/17298)
-- [오등큰수](/17299)
+- [단어 뒤집기 2](https://bh946.github.io/baekjoontest/(C++)%EB%8B%A8%EC%96%B4-%EB%92%A4%EC%A7%91%EA%B8%B0-2-%EB%B0%B1%EC%A4%8017413/)
+- [쇠막대기](https://bh946.github.io/baekjoontest/(C++)%EC%87%A0%EB%A7%89%EB%8C%80%EA%B8%B0-%EB%B0%B1%EC%A4%8010799/)
+  - 복습하기
+
+- [오큰수](https://bh946.github.io/baekjoontest/(C++)%EC%98%A4%ED%81%B0%EC%88%98-%EB%B0%B1%EC%A4%8017298/)
+  - 복습하기
+
+- [오등큰수](https://bh946.github.io/baekjoontest/(C++)%EC%98%A4%EB%93%B1%ED%81%B0%EC%88%98-%EB%B0%B1%EC%A4%8017299/)
 
 
 
@@ -52,15 +58,15 @@ typora-root-url: ../../..
 
 ### 203 - 자료구조 1 (참고)
 
-- [후위 표기식2](/1935)
-- [후위 표기식](/1918)
-- [알파벳 개수](/10808)
-- [알파벳 찾기](/10809)
-- [문자열 분석](/10820)
-- [단어 길이 재기](/2743)
-- [ROT13](/11655)
-- [네 수](/10824)
-- [접미사 배열](/11656)
+- [후위 표기식2](https://bh946.github.io/baekjoontest/(C++)%ED%9B%84%EC%9C%84-%ED%91%9C%EA%B8%B0%EC%8B%9D2-%EB%B0%B1%EC%A4%801935/)
+- [후위 표기식](https://bh946.github.io/baekjoontest/(C++)%ED%9B%84%EC%9C%84-%ED%91%9C%EA%B8%B0%EC%8B%9D-%EB%B0%B1%EC%A4%801918/)
+- [알파벳 개수](https://bh946.github.io/baekjoontest/(C++)%EC%95%8C%ED%8C%8C%EB%B2%B3-%EA%B0%9C%EC%88%98-%EB%B0%B1%EC%A4%8010808/)
+- [알파벳 찾기](https://bh946.github.io/baekjoontest/(C++)%EC%95%8C%ED%8C%8C%EB%B2%B3-%EC%B0%BE%EA%B8%B0-%EB%B0%B1%EC%A4%8010809/)
+- [문자열 분석](https://bh946.github.io/baekjoontest/(C++)%EB%AC%B8%EC%9E%90%EC%97%B4-%EB%B6%84%EC%84%9D-%EB%B0%B1%EC%A4%8010820/)
+- [단어 길이 재기](https://bh946.github.io/baekjoontest/(C++)%EB%8B%A8%EC%96%B4-%EA%B8%B8%EC%9D%B4-%EC%9E%AC%EA%B8%B0-%EB%B0%B1%EC%A4%802743/)
+- [ROT13](https://bh946.github.io/baekjoontest/(C++)ROT13-%EB%B0%B1%EC%A4%8011655/)
+- [네 수](https://bh946.github.io/baekjoontest/(C++)%EB%84%A4-%EC%88%98-%EB%B0%B1%EC%A4%8010824/)
+- [접미사 배열](https://bh946.github.io/baekjoontest/(C++)%EC%A0%91%EB%AF%B8%EC%82%AC-%EB%B0%B0%EC%97%B4-%EB%B0%B1%EC%A4%8011656/)
 
 
 
@@ -68,15 +74,14 @@ typora-root-url: ../../..
 
 ### 300 - 수학 1
 
-- [나머지](/10430)
-- [최대공약수와 최소공배수](/2609)
-- [최소공배수](/1934)
-- [소수 찾기](/1978)
-- [소수 구하기](/1929)
-- [골드바흐의 추측](/6588)
-- [팩토리얼](/10872)
-- [팩토리얼 0의 개수](/1676)
-- [조합 0의 개수](/2004)
+- [최대공약수와 최소공배수](https://bh946.github.io/baekjoontest/(C++)%EC%B5%9C%EB%8C%80%EA%B3%B5%EC%95%BD%EC%88%98%EC%99%80-%EC%B5%9C%EC%86%8C%EA%B3%B5%EB%B0%B0%EC%88%98-%EB%B0%B1%EC%A4%802609/)
+- [최소공배수](https://bh946.github.io/baekjoontest/(C++)%EC%B5%9C%EC%86%8C%EA%B3%B5%EB%B0%B0%EC%88%98-%EB%B0%B1%EC%A4%801934/)
+- [소수 찾기](https://bh946.github.io/baekjoontest/(C++)%EC%86%8C%EC%88%98-%EC%B0%BE%EA%B8%B0-%EB%B0%B1%EC%A4%801978/)
+- [소수 구하기](https://bh946.github.io/baekjoontest/(C++)%EC%86%8C%EC%88%98-%EA%B5%AC%ED%95%98%EA%B8%B0-%EB%B0%B1%EC%A4%801929/)
+- [골드바흐의 추측](https://bh946.github.io/baekjoontest/(C++)%EA%B3%A8%EB%93%9C%EB%B0%94%ED%9D%90%EC%9D%98-%EC%B6%94%EC%B8%A1-%EB%B0%B1%EC%A4%806588/)
+- [팩토리얼 0의 개수](https://bh946.github.io/baekjoontest/(C++)%ED%8C%A9%ED%86%A0%EB%A6%AC%EC%96%BC-0%EC%9D%98-%EA%B0%9C%EC%88%98-%EB%B0%B1%EC%A4%801676/)
+  - 복습하기
+- [조합 0의 개수](https://bh946.github.io/baekjoontest/(C++)%EC%A1%B0%ED%95%A9-0%EC%9D%98-%EA%B0%9C%EC%88%98-%EB%B0%B1%EC%A4%802004/)
 
 
 
@@ -84,12 +89,16 @@ typora-root-url: ../../..
 
 ### 301 - 수학 1 (연습)
 
-- [GCD 합](/9613)
-- [숨바꼭질 6](/17087)
-- [2진수 8진수](/1373)
-- [8진수 2진수](/1212)
-- [-2진수](/2089)
-- [골드바흐 파티션](/17103)
+- [GCD 합](https://bh946.github.io/baekjoontest/(C++)GCD-%ED%95%A9-%EB%B0%B1%EC%A4%809613/)
+- [숨바꼭질 6](https://bh946.github.io/baekjoontest/(C++)%EC%88%A8%EB%B0%94%EA%BC%AD%EC%A7%88-6-%EB%B0%B1%EC%A4%8017087/)
+  - 복습하기
+
+- [2진수 8진수](https://bh946.github.io/baekjoontest/(C++)2%EC%A7%84%EC%88%98-8%EC%A7%84%EC%88%98-%EB%B0%B1%EC%A4%801373/)
+- [8진수 2진수](https://bh946.github.io/baekjoontest/(C++)8%EC%A7%84%EC%88%98-2%EC%A7%84%EC%88%98-%EB%B0%B1%EC%A4%801212/)
+- [-2진수](https://bh946.github.io/baekjoontest/(C++)-2%EC%A7%84%EC%88%98-%EB%B0%B1%EC%A4%802089/)
+  - 복습하기
+
+- [골드바흐 파티션](https://bh946.github.io/baekjoontest/(C++)%EA%B3%A8%EB%93%9C%EB%B0%94%ED%9D%90-%ED%8C%8C%ED%8B%B0%EC%85%98-%EB%B0%B1%EC%A4%8017103/)
 
 
 
@@ -97,10 +106,10 @@ typora-root-url: ../../..
 
 ### 303 - 수학 1 (참고)
 
-- [진법 변환 2](/11005)
-- [진법 변환](/2745)
-- [Base Conversion](/11576)
-- [소인수분해](/11653)
+- [진법 변환 2](https://bh946.github.io/baekjoontest/(C++)%EC%A7%84%EB%B2%95-%EB%B3%80%ED%99%98-2-%EB%B0%B1%EC%A4%8011005/)
+- [진법 변환](https://bh946.github.io/baekjoontest/(C++)%EC%A7%84%EB%B2%95-%EB%B3%80%ED%99%98-%EB%B0%B1%EC%A4%802745/)
+- [Base Conversion](https://bh946.github.io/baekjoontest/(C++)Base-Conversion-%EB%B0%B1%EC%A4%8011576/)
+- [소인수분해](https://bh946.github.io/baekjoontest/(C++)%EC%86%8C%EC%9D%B8%EC%88%98%EB%B6%84%ED%95%B4-%EB%B0%B1%EC%A4%8011653/)
 
 
 
@@ -108,20 +117,32 @@ typora-root-url: ../../..
 
 ### 400 - 다이나믹 프로그래밍 1
 
-- [1로 만들기](/1463)
-- [2×n 타일링](/11726)
-- [2×n 타일링 2](/11727)
-- [1, 2, 3 더하기](/9095)
-- [카드 구매하기](/11052)
-- [카드 구매하기 2](/16194)
-- [1, 2, 3 더하기 5](/15990)
-- [쉬운 계단 수](/10844)
-- [이친수](/2193)
-- [가장 긴 증가하는 부분 수열](/11053)
-- [가장 긴 증가하는 부분 수열 4](/14002)
-- [연속합](/1912)
-- [제곱수의 합](/1699)
-- [합분해](/2225)
+- [1로 만들기](https://bh946.github.io/baekjoontest/(C++)1%EB%A1%9C-%EB%A7%8C%EB%93%A4%EA%B8%B0-%EB%B0%B1%EC%A4%801463/)
+- [2×n 타일링](https://bh946.github.io/baekjoontest/(C++)2xn-%ED%83%80%EC%9D%BC%EB%A7%81-%EB%B0%B1%EC%A4%8011726/)
+- [2×n 타일링 2](https://bh946.github.io/baekjoontest/(C++)2xn-%ED%83%80%EC%9D%BC%EB%A7%81-2-%EB%B0%B1%EC%A4%8011727/)
+- [1, 2, 3 더하기](https://bh946.github.io/baekjoontest/(C++)1,-2,-3-%EB%8D%94%ED%95%98%EA%B8%B0-%EB%B0%B1%EC%A4%809095/)
+- [카드 구매하기](https://bh946.github.io/baekjoontest/(C++)%EC%B9%B4%EB%93%9C-%EA%B5%AC%EB%A7%A4%ED%95%98%EA%B8%B0-%EB%B0%B1%EC%A4%8011052/)
+- [카드 구매하기 2](https://bh946.github.io/baekjoontest/(C++)%EC%B9%B4%EB%93%9C-%EA%B5%AC%EB%A7%A4%ED%95%98%EA%B8%B0-2-%EB%B0%B1%EC%A4%8016194/)
+  - 복습하기
+
+- [1, 2, 3 더하기 5](https://bh946.github.io/baekjoontest/(C++)1,-2,-3-%EB%8D%94%ED%95%98%EA%B8%B0-5-%EB%B0%B1%EC%A4%8015990/)
+  - 복습하기
+
+- [쉬운 계단 수](https://bh946.github.io/baekjoontest/(C++)%EC%89%AC%EC%9A%B4-%EA%B3%84%EB%8B%A8-%EC%88%98-%EB%B0%B1%EC%A4%8010844/)
+  - 복습하기
+
+- [이친수](https://bh946.github.io/baekjoontest/(C++)%EC%9D%B4%EC%B9%9C%EC%88%98-%EB%B0%B1%EC%A4%802193/)
+- [가장 긴 증가하는 부분 수열](https://bh946.github.io/baekjoontest/(C++)%EA%B0%80%EC%9E%A5-%EA%B8%B4-%EC%A6%9D%EA%B0%80%ED%95%98%EB%8A%94-%EB%B6%80%EB%B6%84-%EC%88%98%EC%97%B4-%EB%B0%B1%EC%A4%8011053/)
+  - 복습하기
+
+- [가장 긴 증가하는 부분 수열 4](https://bh946.github.io/baekjoontest/(C++)%EA%B0%80%EC%9E%A5-%EA%B8%B4-%EC%A6%9D%EA%B0%80%ED%95%98%EB%8A%94-%EB%B6%80%EB%B6%84-%EC%88%98%EC%97%B4-4-%EB%B0%B1%EC%A4%8014002/)
+  - 복습하기
+
+- [연속합](https://bh946.github.io/baekjoontest/(C++)%EC%97%B0%EC%86%8D%ED%95%A9-%EB%B0%B1%EC%A4%801912/)
+- [제곱수의 합](https://bh946.github.io/baekjoontest/(C++)%EC%A0%9C%EA%B3%B1%EC%88%98%EC%9D%98-%ED%95%A9-%EB%B0%B1%EC%A4%801699/)
+  - 복습하기
+
+- [합분해](https://bh946.github.io/baekjoontest/(C++)%ED%95%A9%EB%B6%84%ED%95%B4-%EB%B0%B1%EC%A4%802225/)
 
 
 
@@ -129,18 +150,30 @@ typora-root-url: ../../..
 
 ### 401 - 다이나믹 프로그래밍 1 (연습)
 
-- [1, 2, 3 더하기 3](/15988)
-- [RGB거리](/1149)
-- [동물원](/1309)
-- [오르막 수](/11057)
-- [스티커](/9465)
-- [포도주 시식](/2156)
-- [정수 삼각형](/1932)
-- [가장 큰 증가 부분 수열](/11055)
-- [가장 긴 감소하는 부분 수열](/11722)
-- [가장 긴 바이토닉 부분 수열](/11054)
-- [연속합 2](/13398)
-- [타일 채우기](/2133)
+- [1, 2, 3 더하기 3](https://bh946.github.io/baekjoontest/(C++)1,-2,-3-%EB%8D%94%ED%95%98%EA%B8%B0-3-%EB%B0%B1%EC%A4%8015988/)
+- [RGB거리](https://bh946.github.io/baekjoontest/(C++)RGB%EA%B1%B0%EB%A6%AC-%EB%B0%B1%EC%A4%801149/)
+- [동물원](https://bh946.github.io/baekjoontest/(C++)%EB%8F%99%EB%AC%BC%EC%9B%90-%EB%B0%B1%EC%A4%801309/)
+  - 복습하기
+
+- [오르막 수](https://bh946.github.io/baekjoontest/(C++)%EC%98%A4%EB%A5%B4%EB%A7%89-%EC%88%98-%EB%B0%B1%EC%A4%8011057/)
+- [스티커](https://bh946.github.io/baekjoontest/(C++)%EC%8A%A4%ED%8B%B0%EC%BB%A4-%EB%B0%B1%EC%A4%809465/)
+- [포도주 시식](https://bh946.github.io/baekjoontest/(C++)%ED%8F%AC%EB%8F%84%EC%A3%BC-%EC%8B%9C%EC%8B%9D-%EB%B0%B1%EC%A4%802156/)
+  - 복습하기
+
+- [정수 삼각형](https://bh946.github.io/baekjoontest/(C++)%EC%A0%95%EC%88%98-%EC%82%BC%EA%B0%81%ED%98%95-%EB%B0%B1%EC%A4%801932/)
+- [가장 큰 증가 부분 수열](https://bh946.github.io/baekjoontest/(C++)%EA%B0%80%EC%9E%A5-%ED%81%B0-%EC%A6%9D%EA%B0%80-%EB%B6%80%EB%B6%84-%EC%88%98%EC%97%B4-%EB%B0%B1%EC%A4%8011055/)
+  - 복습하기
+
+- [가장 긴 감소하는 부분 수열](https://bh946.github.io/baekjoontest/(C++)%EA%B0%80%EC%9E%A5-%EA%B8%B4-%EA%B0%90%EC%86%8C%ED%95%98%EB%8A%94-%EB%B6%80%EB%B6%84-%EC%88%98%EC%97%B4-%EB%B0%B1%EC%A4%8011722/)
+- [가장 긴 바이토닉 부분 수열](https://bh946.github.io/baekjoontest/(C++)%EA%B0%80%EC%9E%A5-%EA%B8%B4-%EB%B0%94%EC%9D%B4%ED%86%A0%EB%8B%89-%EB%B6%80%EB%B6%84-%EC%88%98%EC%97%B4-%EB%B0%B1%EC%A4%8011054/)
+  - 복습하기
+
+- [연속합 2](https://bh946.github.io/baekjoontest/(C++)%EC%97%B0%EC%86%8D%ED%95%A9-2-%EB%B0%B1%EC%A4%8013398/)
+  - 복습하기
+
+- [타일 채우기](https://bh946.github.io/baekjoontest/(C++)%ED%83%80%EC%9D%BC-%EC%B1%84%EC%9A%B0%EA%B8%B0-%EB%B0%B1%EC%A4%802133/)
+  - 복습하기
+
 
 
 
@@ -148,9 +181,8 @@ typora-root-url: ../../..
 
 ### 402 - 다이나믹 프로그래밍 1 (도전)
 
-- [동물원](/1309)
-- [RGB거리 2](/17404)
-- [합분해](/2225)
+- [RGB거리 2](https://bh946.github.io/baekjoontest/(C++)RGB%EA%B1%B0%EB%A6%AC-2-%EB%B0%B1%EC%A4%8017404/)
+  - 복습하기
 
 <br>
 
