--- a/_posts/Coding_Test/Baekjoon_Test/2023-01-28-(백준)코테 준비 시작(Intro).md
+++ b/_posts/Coding_Test/Baekjoon_Test/2023-01-28-(백준)코테 준비 시작(Intro).md
@@ -77,10 +77,16 @@ typora-root-url: ../../..
 
 
 
-**마지막으로는 위에서 설명한 `필수적인 개념학습`들을 위주로 공부하면 된다고 생각한다.**
+**다음으로는 위에서 설명한 `필수적인 개념학습`들을 위주로 공부하면 된다고 생각한다.**
 
 * 이 부분에서는 자신이 부족하다고 생각하는 개념들을 위주로 보충한다고 생각하며 공부한다.
 * 백준에 문제들이 알고리즘별로도 잘 분류해두었기 때문에 관련 문제찾기는 쉬울것이다.
+
+
+
+**마지막으로 예전과 달리 `코테 준비` 관련 강의도 추가되어서 그쪽 문제들도 풀어보면 도움될거라고 생각한다.**
+
+**참고로 `SQL, 기업 코테 문제` 관련 문제들은 '프로그래머스' 에서 풀자!**
 
 <br>
 
