docs : 프로그래머스 풀이

--- a/_posts/Coding_Test/Programmers_Test/2023-03-01-(프로그래머스)코테 준비 시작(Intro).md
+++ b/_posts/Coding_Test/Programmers_Test/2023-03-01-(프로그래머스)코테 준비 시작(Intro).md
@@ -19,5 +19,8 @@ typora-root-url: ../../..
 **따라서 '프로그래머스' 에서는 `SQL문` 관련한 문제들을 중점으로 풀어볼 생각이다.**  
 **또한 '카카오 코테' 문제와 같이 `실제 코테 문제` 들도 카테고리별로 분류가 되어있어서 시간이 된다면 이부분도 풀어볼 생각이다.**
 
-<br>
+* **[SQL문 정리](https://bh946.github.io/database/DB-SQL(4)/)**
+  * 예전에 정리했던 SQL문 관련 문법인데 참고하자. (까먹고 있었네,,)
+
+<br><br>
 
