--- a/_posts/Coding_Test/Programmers_Test/2023-03-04-(MySQL)LV 3 문제 모음.md
+++ b/_posts/Coding_Test/Programmers_Test/2023-03-04-(MySQL)LV 3 문제 모음.md
@@ -46,3 +46,45 @@ SELECT distinct a.car_id from car_rental_company_car a join car_rental_company_r
 
 <br><br>
 
+## 문제 2
+
+* **[자동차 대여 기록에서 대여중 / 대여 가능 여부 구분하기](https://school.programmers.co.kr/learn/courses/30/lessons/157340)**
+* **이 문제 꼭 잘 확인!!!**
+
+<br>
+
+### 코드
+
+```mysql
+SELECT CAR_ID, max(case when START_DATE<=DATE(20221016) && END_DATE >= Date(20221016) 
+then "대여중" else "대여 가능" end) as AVAILABILITY 
+from CAR_RENTAL_COMPANY_RENTAL_HISTORY group by car_id order by car_id desc;
+```
+
+<br>
+
+### 풀이
+
+**`max(case when START_DATE<=DATE(20221016) && END_DATE >= Date(20221016) 
+then "대여중" else "대여 가능" end)`**
+
+* 여기서는 `case when ... then ... else ... end` 문법을 사용!!
+* 또한, 제일 중요한 점은 왜??? `max()` 를 사용했냐는 것이다.
+  * 위 조건의 결과로 "대여중", "대여 가능" 이 둘다 구해졌을경우?? `max()` 함수는 "대여중" 이 더 큰값으로 보고 출력해준다!!
+  * 잘 생각해보면 위 조건문의 경우 동일한 `CAR_ID` 가 여러개 있으므로 "대여중", "대여 가능" 둘다 구해지는 경우가 존재한다!! => 그래서 `max()` 로 "대여중" 을 선택
+  * 또 다른 방법으로는, 삽입 쿼리문인 `IN 쿼리문` 을 통해서도 간단히 해결할 수 있다.
+
+<br>
+
+**참고 문법**
+
+```mysql
+CASE 컬럼명 | 표현식 WHEN 조건식1 THEN 결과1
+                                WHEN 조건식2 THEN 결과2
+                                                 .......
+                                WHEN 조건식n THEN 결과n 
+                                ELSE 결과
+             END
+```
+
+<br><br>
