--- a/_posts/Coding_Test/Programmers_Test/2023-03-04-(MySQL)LV 3 문제 모음.md
+++ b/_posts/Coding_Test/Programmers_Test/2023-03-04-(MySQL)LV 3 문제 모음.md
@@ -88,3 +88,41 @@ CASE 컬럼명 | 표현식 WHEN 조건식1 THEN 결과1
 ```
 
 <br><br>
+
+## 문제 3
+
+* **[대여 횟수가 많은 자동차들의 월별 대여 횟수 구하기](https://school.programmers.co.kr/learn/courses/30/lessons/151139)**
+* **참고로 "group by 결과에 조건을 걸고 싶을 때, having을 사용" 이라고 생각하자.**
+
+<br>
+
+### 코드
+
+```mysql
+# -- 코드를 입력하세요
+SELECT month(start_date) as month, car_id, count(*) as records 
+from CAR_RENTAL_COMPANY_RENTAL_HISTORY 
+group by month, car_id having month between 8 and 10 and car_id 
+in(select car_id from CAR_RENTAL_COMPANY_RENTAL_HISTORY 
+   where month(start_date) between 8 and 10 group by car_id having count(*) >= 5) 
+order by month asc, car_id desc;
+```
+
+<br>
+
+### 풀이
+
+**`SELECT month(start_date) as month, car_id, count(*) as records `**
+
+* 문제를 잘 해석해보면 시작날짜 기준이라고 얘기가 나와있으므로 시작날짜 컬럼명으로 `month` 를 구해준다!
+* 또한, 적절히 조건과 함께 그룹핑을 하기 때문에 `count(*)` 로 개수를 구하면 그것이 `records` 값이 된다.
+
+**` car_id in(select car_id from CAR_RENTAL_COMPANY_RENTAL_HISTORY 
+   where month(start_date) between 8 and 10 group by car_id having count(*) >= 5) `**
+
+* 그룹절의 조건문 자리에 들어가며, IN 쿼리문을 사용했다.
+* 총 대여 횟수를 구하려면 `car_id` 를 그룹으로 지정해줘서 `count(*)` 해야지 구할 수 있기 때문에  
+  IN 쿼리문으로 따로 구해보았다.
+
+<br><br>
+
