--- a/_posts/Coding_Test/Programmers_Test/2023-03-04-(MySQL)LV 3 문제 모음.md
+++ b/_posts/Coding_Test/Programmers_Test/2023-03-04-(MySQL)LV 3 문제 모음.md
@@ -126,3 +126,26 @@ order by month asc, car_id desc;
 
 <br><br>
 
+## 문제 4
+
+* **[카테고리 별 도서 판매량 집계하기](https://school.programmers.co.kr/learn/courses/30/lessons/144855)**
+* **참고로 join문은 두 테이블을 합치면서 중복도 제거해주므로, 꼭 필요할때 사용을 권장**
+
+<br>
+
+### 코드
+
+```mysql
+-- 코드를 입력하세요
+SELECT a.category, sum(b.sales) as total_sales FROM BOOK_SALES b JOIN BOOK a ON b.BOOK_ID = a.BOOK_ID
+where month(b.sales_date) = 1 group by a.category order by a.category asc;
+```
+
+<br>
+
+### 풀이
+
+**`FROM BOOK_SALES b JOIN BOOK a ON b.BOOK_ID = a.BOOK_ID` 처럼 join문에 익숙해질것!!**
+
+<br><br>
+
