--- a/_posts/BlockChain/블록체인_특강/2022-07-21-4일차-(ERC20)스마트컨트랙트 토큰 발행, 전송 & 지갑 만들기.md
+++ b/_posts/BlockChain/블록체인_특강/2022-07-21-4일차-(ERC20)스마트컨트랙트 토큰 발행, 전송 & 지갑 만들기.md
@@ -9,8 +9,6 @@ sidebar:
   nav: "docs"
 typora-root-url: ../../..
 
-
-
 ---
 
 
@@ -35,7 +33,7 @@ typora-root-url: ../../..
   * 이또한 실제 있는 개념. (지역화폐, 경기도 지역화폐, 전라도 지역화폐, 경상도 지역화폐, 광주시 지역화폐, 전북 지역화폐)
   * 다만, 코로나로 인해 아직이다.
 
-
+<br>
 
 이번에는 많이 복잡하다.
 
@@ -44,13 +42,13 @@ typora-root-url: ../../..
 
 `deploy(배포)`가 된건 체인에 **created**된 느낌이고 이때 생성된 주소가 `deploy`된 **스마트 컨트랙트 주소**이다.  
 => 해당 주소(**deploy된 스마트 컨트랙트 주소**)를 가지고,   
-발행한 토큰을 `Metamask` 에서 가져올 수 있다(참고 : 계정 가져오는건 **Public Key**)  
+발행한 토큰을 `Metamask` 에서 가져올 수 있다
 
-<br>
+<br><br>
 
 ## 스마트 컨트랙트 문법
 
-
+<br>
 
 ### 변수/데이터 타입
 
@@ -59,7 +57,7 @@ typora-root-url: ../../..
 
 ![image-20220721100648190](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721100648190.png)
 
-
+<br>
 
 ### 함수
 
@@ -67,7 +65,7 @@ typora-root-url: ../../..
 
 ![image-20220721100820531](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721100820531.png)
 
-
+<br>
 
 ### 함수의 호출 범위 (가시성)
 
@@ -77,7 +75,7 @@ typora-root-url: ../../..
 
 ![image-20220721100949155](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721100949155.png)
 
-
+<br>
 
 ### 생성자
 
@@ -85,7 +83,7 @@ typora-root-url: ../../..
 
 ![image-20220721101215258](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721101215258.png)
 
-
+<br>
 
 ### 함수 변경자
 
@@ -93,7 +91,7 @@ typora-root-url: ../../..
 
 ![image-20220721101311341](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721101311341.png)
 
-
+<br>
 
 ### 예외 처리, 이벤트
 
@@ -102,27 +100,27 @@ typora-root-url: ../../..
 
 ![image-20220721101413693](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721101413693.png)
 
-
+<br>
 
 ### address 타입의 자료형
 
 ![image-20220721101624359](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721101624359.png)
 
-
+<br>
 
 ### 조건문, 반복문
 
 * **조건문 : if, if else, else**
 * **반복문 : for**
 
-
+<br>
 
 ### 상속
 
 * **is 키워드 사용**
 * **public, internal 일때 사용 가능**
 
-<br>
+<br><br>
 
 ## Remix 활용 (IDE) - getter, setter 테스트
 
@@ -130,7 +128,7 @@ typora-root-url: ../../..
 
 ![image-20220721110945096](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721110945096.png)
 
-
+<br>
 
 ### 예시
 
@@ -141,7 +139,7 @@ typora-root-url: ../../..
 
 ![image-20220721112632148](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721112632148.png)
 
-
+<br>
 
 ### Deploy
 
@@ -156,7 +154,7 @@ typora-root-url: ../../..
 
 ![image-20220721113059425](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721113059425.png)
 
-<br>
+<br><br>
 
 ## ganache 활용
 
@@ -167,19 +165,19 @@ typora-root-url: ../../..
 
 ![image-20220721120010687](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721120010687.png)
 
-
+<br>
 
 **Deploy 이후 call을 해보겠다.(postString 클릭)**
 
 ![image-20220721120404615](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721120404615.png)
 
-
+<br>
 
 **TXDATA가 우리가 보낸 값 ganache 이라고 보면 된다.**
 
 ![image-20220721120307459](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721120307459.png)
 
-<br>
+<br><br>
 
 ## besu 활용
 
@@ -192,24 +190,24 @@ typora-root-url: ../../..
 
 ![image-20220721121723907](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721121723907.png)
 
-
+<br>
 
 **Deploy로 Creation한 결과 지갑을 확인해보면 가스(수수료)가 빠진걸 알 수 있다.**
 
 ![image-20220721122041696](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721122041696.png)
 
-
+<br>
 
 **postInt 버튼을 클릭했을시 수수료가 빠지는 모습도 볼 수 있다.**
 
 ![image-20220721122059648](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721122059648.png)
 
-
+<br>
 
 **마지막으로 postman에서 해시값 보낸것 확인가능하다.  
 ganache에서 TXDATA로 보여지던 부분처럼 말이다.**
 
-<br>
+<br><br>
 
 ## testnet 활용
 
@@ -217,7 +215,7 @@ ganache에서 TXDATA로 보여지던 부분처럼 말이다.**
   * 마찬가지로 ENVIRONMENT에 metamask로 하면된다.
 * etherscan에서도 확인가능
 
-<br>
+<br><br>
 
 ## 토큰 발행 실습 - ERC20 규칙
 
@@ -234,7 +232,7 @@ ganache에서 TXDATA로 보여지던 부분처럼 말이다.**
 
 **코드에 컴파일 버전도 0.8.0이면 맞춰서 컴파일 하면 에러없이 잘 될것이다.**
 
-
+<br>
 
 **계속 코드를 수정하자면...**
 
@@ -253,7 +251,7 @@ function decimals() public view virtual override returns (uint8) {
 
 ```
 
-
+<br>
 
 **테스트로 Deploy 할때는 CONTRACT를 ERC20.sol으로 하면 토큰을 잘 발행하게 된다.** 
 
@@ -261,9 +259,7 @@ function decimals() public view virtual override returns (uint8) {
 
 ![image-20220721144445731](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721144445731.png)
 
-
-
-
+<br>
 
 ### Ganache에서 테스트
 
@@ -273,7 +269,7 @@ function decimals() public view virtual override returns (uint8) {
 
 ![image-20220721144945188](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721144945188.png)
 
-
+<br>
 
 **Remix**
 
@@ -281,7 +277,7 @@ function decimals() public view virtual override returns (uint8) {
 
 ![image-20220721145124175](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721145124175.png)
 
-
+<br>
 
 **Metamask**
 
@@ -290,21 +286,19 @@ function decimals() public view virtual override returns (uint8) {
 
 ![image-20220721145223074](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721145223074.png)
 
-
-
-
+<br>
 
 ### Besu에서 테스트
 
 **위 작업을 Besu에서도 해보겠다. 서버 다시 구동하자 node1~4**
 
-
+<br>
 
 **Remix**
 
 ![image-20220721145609580](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721145609580.png)
 
-
+<br>
 
 **Metamask**
 
@@ -312,7 +306,7 @@ function decimals() public view virtual override returns (uint8) {
 
 ![image-20220721145633932](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721145633932.png)
 
-
+<br>
 
 **함수사용**
 
@@ -320,11 +314,9 @@ function decimals() public view virtual override returns (uint8) {
 
 ![image-20220721145830394](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721145830394.png)
 
-
-
 ![image-20220721150033768](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721150033768.png)
 
-
+<br>
 
 **내역만 보고, 토큰은 안보여줬는데 토큰은 Metamask에서 토큰 가져오기 하면 볼 수 있다.  
 주소는 Deployed Contracts에 있는 주소 사용**
@@ -335,13 +327,13 @@ function decimals() public view virtual override returns (uint8) {
 
 ![image-20220721150723852](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721150723852.png)
 
-
+<br>
 
 **JW 새로 생성한 토큰 전송 또한 문제없다.**
 
 ![image-20220721150920462](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721150920462.png)
 
-<br>
+<br><br>
 
 ## 지갑 만들기 실습
 
@@ -354,7 +346,7 @@ function decimals() public view virtual override returns (uint8) {
   * package.json 생성
 * 하드코딩을 시작한다. 모든 스마트 컨트랙트 정보들 사용하기위해
 
-
+<br>
 
 ### **package.json의 의존성(dependecise) 수정**
 
@@ -380,7 +372,7 @@ function decimals() public view virtual override returns (uint8) {
 }
 ```
 
-
+<br>
 
 ### html 작성
 
@@ -394,7 +386,7 @@ function decimals() public view virtual override returns (uint8) {
 </form>
 ```
 
-
+<br>
 
 **deploy.html 코드 작성**
 
@@ -407,7 +399,7 @@ function decimals() public view virtual override returns (uint8) {
 </form>
 ```
 
-
+<br>
 
 **balance.html 코드 작성**
 
@@ -418,11 +410,11 @@ function decimals() public view virtual override returns (uint8) {
 </form>
 ```
 
-
+<br>
 
 ### **server.js 코드 작성**
 
-
+<br>
 
 #### 1) deploy
 
@@ -441,13 +433,14 @@ function decimals() public view virtual override returns (uint8) {
 
 ![image-20220721165853197](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721165853197.png)
 
-
+<br>
 
 토큰 가져올때는 Remix에서 
 
 * ![image-20220721163825228](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721163825228.png)  이부분 복사해서 토큰 가져온것
 
-  
+
+<br>
 
 위와 유사하게 아래 실행해서 저부분 주소 사용해서 토큰 가져오면 된다.  
 **이 주소는 deploy된 스마트 컨트랙트의 주소이다.**
@@ -460,7 +453,7 @@ function decimals() public view virtual override returns (uint8) {
 
 ![image-20220721170011381](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721170011381.png)
 
-
+<br>
 
 #### 2) send
 
@@ -473,9 +466,7 @@ function decimals() public view virtual override returns (uint8) {
 
 ![image-20220721173019614](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721173019614.png)
 
-
-
-
+<br>
 
 #### 3) balance
 
@@ -489,19 +480,19 @@ function decimals() public view virtual override returns (uint8) {
 
 ![image-20220721173139042](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721173139042.png)
 
-<br>
+<br><br>
 
 ## 개념 보충설명
 
 * 참고 : `JavaScript`안에 **Nodejs**이고, `Nodejs`안에 **Express, react**가 포함된다.
 
-
+<br>
 
 ### 전체적인 구조
 
 ![image-20220721131028901](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721131028901.png)
 
-
+<br>
 
 ### Metamask 동작 원리
 
@@ -509,9 +500,7 @@ function decimals() public view virtual override returns (uint8) {
 
 ![image-20220721131115910](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721131115910.png)
 
-
-
-
+<br>
 
 ### Ganache 동작 원리
 
@@ -520,9 +509,7 @@ function decimals() public view virtual override returns (uint8) {
 
 ![image-20220721131944608](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721131944608.png)
 
-
-
-
+<br>
 
 ### besu활용 돌아간 동작원리
 
@@ -531,8 +518,5 @@ function decimals() public view virtual override returns (uint8) {
   Ganache는 전송하는 UI도 없고 불가했다는 점 기억
 
 ![image-20220721131911463](/images\2022-07-21-4일차-스마트컨트랙트 활용\image-20220721131911463.png)
-
-
-
 
 
