--- a/_posts/Coding_Test/Programmers_Test/2023-03-04-(MySQL)LV 3 문제 모음.md
+++ b/_posts/Coding_Test/Programmers_Test/2023-03-04-(MySQL)LV 3 문제 모음.md
@@ -149,3 +149,39 @@ where month(b.sales_date) = 1 group by a.category order by a.category asc;
 
 <br><br>
 
+## 문제 5
+
+* **[즐겨찾기가 가장 많은 식당 정보 출력하기](https://school.programmers.co.kr/learn/courses/30/lessons/131123)**
+* **이번꺼는 join문에 익숙했다면 풀만한 문제이다. 익숙해지자 ㅠㅠ**
+
+<br>
+
+### 코드
+
+```mysql
+-- 코드를 입력하세요
+# select food_type, max(favorites) as max from rest_info group by food_type;
+
+select r.food_type, r.rest_id, r.rest_name, r.favorites 
+from (select food_type, max(favorites) as max from rest_info group by food_type) as t 
+join rest_info r on t.food_type = r.food_type
+where r.favorites = t.max 
+order by r.food_type desc;
+```
+
+<br>
+
+### 풀이
+
+**`select food_type, max(favorites) as max from rest_info group by food_type` 를 처음에 생각해내는게 중요!!**
+
+* `max(favorites)` 가 당연히 제일 큰값 나올거란건 자명하다. 따라서 필자는 처음에 그룹핑을 `food_type` 으로 하고나서 `max(favorites)` 를 해서 해결하려고 했다.
+  * 여기서 문제점은 `max(favorites)` 이것만 올바르게 나오고 나머지는 식당이름, id 등등이 매칭이 안된다는점이다.
+  * **따라서 위의 `select ...` 문처럼 따로 ``max(favorites)`` 를 구해서 추가한 칼럼 테이블을 join하기로 했다! (이것이 핵심!!!)**
+
+**`where r.favorites = t.max` 도 핵심!!**
+
+* `where` 에 조건문을 줘서 전체 `select` 를 조건에 맞게 가져오게 된다.
+
+<br><br>
+
