docs : 게시글 정리

--- a/_posts/Code_Editor/Colab/2022-03-04-Colab 정리.md
+++ b/_posts/Code_Editor/Colab/2022-03-04-Colab 정리.md
@@ -9,11 +9,13 @@ sidebar:
   nav: "docs"
 ---
 
+
+
 ## Colab(코랩)
 
 * 홈페이지에서 파이썬을 실행할 수 있게 지원해주는 사이트(주피터와 같은 맥락)
 
-
+<br>
 
 #### 한글이 제대로 나오지 않는 경우?
 
@@ -26,17 +28,21 @@ plt.rc('font', family='NanumBarunGothic')
 !rm ~/.cache/matplotlib -rf
 ```
 
-
+<br>
 
 #### 구글 드라이브 연동
 
 * Colab은 기본적으로 Colab 라이브러리를 포함하고 있다.
+
+<br>
 
 **Colab이 아닌 IDE인 경우 pip 필요**
 
 ```python
 !python -m pip install -U google-colab
 ```
+
+<br>
 
 **1. 사용법(자신의 구글 드라이브에 직접 csv 파일 업로드 한 경우**)
 
@@ -53,12 +59,14 @@ my_df = pd.read_csv(path_dataset + filename)
 print(my_df.head(10))
 ```
 
+<br>
+
 **2. 사용법(구글 드라이브로 공유된 파일을 접근하기)**
 
 * drive 객체 만들기
 
   ```python
-  # 아래 코드는 공유 파일사용하기 위한 코드 이니 그대로 사용하시면 됩니다.
+  # 아래 코드는 공유 파일을 사용하기 위한 코드 이니 그대로 사용하시면 됩니다.
   
   # pyDrive 설치
   # !pip install -U -q PyDrive
@@ -73,6 +81,8 @@ print(my_df.head(10))
   gauth.credentials = GoogleCredentials.get_application_default()
   drive = GoogleDrive(gauth)
   ```
+
+<br>
 
 * 구글 드라이브로 공유된 파일 공유해서 가져오기
 
