docs : 게시글 정리 진행중

--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-29-(백준)알고리즘 활용 라이브러리 - cpp.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-29-(백준)알고리즘 활용 라이브러리 - cpp.md
@@ -18,7 +18,7 @@ typora-root-url: ../../..
 
 **문제를 풀면서 활용한 라이브러리들을 기억하기 위해서 해당 게시글을 작성하겠다~!**
 
-<br>
+<br><br>
 
 ## 사용한 라이브러리들
 
@@ -29,9 +29,7 @@ typora-root-url: ../../..
 
 * **입출력 라이브러리**
 
-
-
-
+<br>
 
 ```c++
 #include <string> // getline, compare 등등 사용위해
@@ -64,11 +62,9 @@ typora-root-url: ../../..
     * 예로 `cin >> inputStr` 로 "abc def g" 입력 받으면 "abc" 만 `inputStr` 이 기억
     * 또한, 마지막 자리에는 `'\0'` 이 반드시 존재
   * **`'\n'` 을(엔터) 문자열 끝이라고 판단하는 `getline` 함수를 활용하는것도 추천**
-    * 위의 설명 참고
+    * 이미 위에서 설명했음. 참고.
 
-
-
-
+<br>
 
 ```c++
 #include <cmath> // C의 math.h => pow 등등 수학관련 사용위해
@@ -78,9 +74,7 @@ typora-root-url: ../../..
   * 예로 제곱 함수 - `pow(밑수, 지수)`
     * pow(2, 5) 는??	=>	2^5 = 32
 
-
-
-
+<br>
 
 ```c++
 #include <stack> // 스택
@@ -90,9 +84,7 @@ typora-root-url: ../../..
 
 * **자료구조 관련 라이브러리**
 
-
-
-
+<br>
 
 ```c++
 #include <algorithm> // sort 등등 알고리즘 관련 사용
@@ -101,18 +93,15 @@ typora-root-url: ../../..
 * **알고리즘 관련 라이브러리**
 
   * `sort` 함수 사용
-
-    * `sort(&outputArr[0], &outputArr[7]);`
+    * `sort(&outputArr[0], &outputArr[배열 크기만큼]);`
     * 기본값 오름차순
-
+    
   * `lower_bound` 함수 사용
+  * `lower_bound(&newArr[0], &newArr[lastIndex], inputNum)`
+    
+  * 데이터 내 특정 K값보다 같거나 큰 값이 처음 나오는 위치를 리턴해주는 알고리즘
 
-    * `lower_bound(&newArr[0], &newArr[lastIndex], inputNum)`
-
-    * 데이터 내 특정 K값보다 같거나 큰 값이 처음 나오는 위치를 리턴해주는 알고리즘
-
-
-<br>
+<br><br>
 
 ## Outro..
 
