--- a/_posts/Coding_Test/Baekjoon_Concept/2023-02-09-(백준)알고리즘 기초1 - 수학.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-02-09-(백준)알고리즘 기초1 - 수학.md
@@ -16,14 +16,14 @@ typora-root-url: ../../..
 
 **백준 문제 풀면서 마주친 수학 개념들 정리**
 
-<br>
+<br><br>
 
 ## 최대 공약수(GCD), 최소 공배수(LCM)
 
 **"공"약수, "공"배수 로써 "공통된 약수, 배수"를 의미하므로 두 수에서 공통된 최대약수, 공통된 최소배수 값을 구하는 것이다.**
 
-- 최대공약수 : 두 수의 몫이 서로소(더이상 공통수로 나눌 수 없을때)가 나올때까지 나눠서 나눈 수들의 곱
-- 최소공배수 : 위의 최대공약수에서 서로소(최종 몫)까지 다 곱한 값
+- 최대공약수 : 두 수의 몫이 서로소(더이상 공통수로 나눌 수 없을때)가 나올때까지 나눠서 `나눈 수` 들의 곱
+- 최소공배수 : 위의 `최대공약수에서 서로소(최종 몫)` 까지 다 곱한 값
 - 서로소 : 최대공약수가 1인 두 자연수
   - 예 : 서로소인 3과 2의 경s우 공약수는 1만 있으므로 최대공약수는 1
     - 3은 약수 1,3을 가짐
@@ -35,11 +35,11 @@ typora-root-url: ../../..
 
 ![image-20230206184300906](/images/2023-02-19-(C++)최대공약수와 최소공배수 - 백준2609/image-20230203174644617.png)
 
-
+<br>
 
 **두개의 수(물론 여러개의 수도 다룰 줄 알아야 함)를 입력받아서 GCD, LCM을 구하는 문제에서 필요했던 개념이다.**
 
-
+<br>
 
 ### 중요!! 유클리드 호제법
 
@@ -51,10 +51,10 @@ typora-root-url: ../../..
     - (a, b) = (b, r)
     - EX) 10 20 : (10, 20) = (20, 10) = (10, 0) = 10
 * 참고로 여러 수에서의 최대공약수도 간단히 구할 수 있다.
-  * 먼저, gcd(a,b)를 유클리드 호제법이라고 한다면
+  * 먼저, gcd(a,b)를 유클리드 호제법 함수라고 가정하자!
   * 4개의 수가 a,b,c,d라면 gcd(gcd(gcd(a,b),c),d) 이런 느낌으로 재귀나 for문으로 구하면 된다.
 
-<br>
+<br><br>
 
 ## 소수
 
@@ -62,13 +62,13 @@ typora-root-url: ../../..
 
 * EX) 2 3 5 7 11 13 17 19 23 29 ...
 
-
+<br>
 
 **방법1) 약수를 구해서 1과 자기자신을 가지는지 구하기**
 
 * 소인수분해처럼 직접 나눠서 약수들을 구해서 판별하는 방식(속도 느림)
 
-
+<br>
 
 ### 중요!! 방법2) 에라토스테네스의 체 방식
 
@@ -78,18 +78,28 @@ typora-root-url: ../../..
   - 즉, 당연히 자신보다 작은 수들의 배수값과 동일한게 있으면 안된다.
 * 에라토스테네스의 체 원리가 이런 특성을 이용한것이다.
   - 초기는 전부 소수로 보기 때문에 현재 수가 아직 걸러지지 않았다면 소수이고, 그게 아니면 현재 수의 배수들을 제거해나가는 방식이다.
-  - 예로 에라토스테네스의 체 알고리즘 흐름을 보자면
+  - 예로 에라토스테네스의 체 **알고리즘 흐름**을 보자면
     - `int p=2` 부터 시작하므로 `p*p=2*2=4`로써 4부터 2의 배수들을 쭉 prime 배열에서 걸러낸다.
       - 참고: 1은 소수X 이므로 `p=2`부터 시작
       - 또한, 4부터 2의 배수들의 의미는 `i += 2` 를 의미 (i=4)
-    - 결과는 처음 `prime[2]`는 소수로써 안걸러지고, prime[4, 6, 8...] 배수들은 소수가 아닌것으로 걸러지는 형태이다.
+    - 그 결과는 처음 `prime[2]`는 소수로써 안걸러지고, prime[4, 6, 8...] 배수들은 소수가 아닌것으로 걸러지는 형태이다.
     - `p=3` 의 경우 위과정과 완전 동일하다.
     - `p=4` 의 경우?? `prime[4]`는 애초에 `p=2`때 걸러졌기 때문에 바로 다음 `p++`로 넘어간다.
-    - 이런형태로 흘러간다.
+    - 이런형태로 흘러간다. (아래 코드 참고!!)
 
+```c++
+p = 2;
+while (p * p <= N) {
+    if (prime[p] == false) {
+        for (i = p * p; i < N + 1; i += p) {
+            prime[i] = true;
+        }
+    }
+    p++;
+}
+```
 
-
-<br>
+<br><br>
 
 ## 소인수분해
 
@@ -101,7 +111,7 @@ typora-root-url: ../../..
 
 ![image-20230206184300906](/images/2023-02-09-(백준)알고리즘 기초1 - 수학/image-20230206184300906.png)
 
-
+<br>
 
 **N팩토리얼의 값에서 일의자리 수 부터 0의 개수를 구하되 처음 0이 아닌 숫자가 나올 때까지 0의 개수를 구하는 문제에서 사용했다.**
 
@@ -113,7 +123,7 @@ typora-root-url: ../../..
   * 자세한 내용은 `팩토리얼 0의 개수` 풀이 게시글 참고
   * 물론 이것 말고도 응용 문제는 다양하다.
 
-
+<br>
 
 ### 중요! 약수에 존재하는 특정 수의 개수
 
@@ -128,7 +138,7 @@ typora-root-url: ../../..
   - **5로 해당 `10` 을 나누어주면?? 1~10 곱 사이의 5가 나온 개수가 출력된다 => 이 특징을 이용!**
     - 5의 개수 : 10/5=2, 10/5^2 = 0 => 총 2개
     - 2의 개수 : 10/2=5, 10/2^2 = 2, 10/2^3 = 1, 10/2^4 = 0 => 총 8개
-  - **참고로 위에서 2나 5의 제곱 수를 고려하고 있는데, 이 원리를 설명하겠다.**
+  - **참고로 위에서 2나 5의 제곱 수도 고려하고 있는데, 이 원리를 설명하겠다.**
     - 예로 `25!`을 생각해보자. 마지막 `25`는 `25=5*5`로써 5가 한개 더 있다.
     - 따라서 5로 25를 나눠주면?? 1~25 곱 사이의 5가 나온 개수가 총 출력되지만
     - `25(=5*5)` 의 경우엔 5가 2개이지만 이때 1개만 카운트 된다  
@@ -138,13 +148,15 @@ typora-root-url: ../../..
     - 해당 원리를 이용한다면?
       - **EX) 5의 개수 : 25/5 = 5, 25/25 = 1 => 총 6개**
 
-<br>
+<br><br>
 
 ## 조합
 
 **조합의 공식 : `nCr = n!/[(n-r)!r!]`**
 
-<br>
+* 물론 이 조합을 DP로 구하던 방식도 있음!! (생각보다 간단)
+
+<br><br>
 
 ## A진법 to B진법(=A진수 to B진수)의 변환과 관계
 
@@ -163,8 +175,7 @@ typora-root-url: ../../..
   * 10진수를 B진법으로 계속 나누어서 나머지 값을 거꾸로 출력하는 방식이다.
   * **그림으로 참고(추천 URL) : [10진수 A,B 진법 관계](https://piyoro.github.io/program/221770535071/)**
 
-
+<br>
 
 **'Base Conversion' 풀이 게시글 참고**
 
-<br>
