--- a/_posts/etc/Blog/2022-09-07-(Blog) 페이지 화면 커스텀(크기, 너비, 밑줄 등).md
+++ b/_posts/etc/Blog/2022-09-07-(Blog) 페이지 화면 커스텀(크기, 너비, 밑줄 등).md
@@ -14,19 +14,15 @@ typora-root-url: ../../..
 
 ## page 화면 변경하기
 
-
-
 ### 기존사진
 
-![image-20220909155800719](/BH946.github.io/images/2022-09-06-blog 디자인 커스텀/image-20220909155800719.png)
+![image-20220909155800719](/images/2022-09-06-blog 디자인 커스텀/image-20220909155800719.png)
 
-
+<br>
 
 **위와 같은 기존화면에서 최근포스트 처럼 제목부분을 바꾸고 싶고, 각 포스트들도 화면 출력을 다르게 할 예정이다.**
 
-
-
-
+<br>
 
 ### 제목 변경
 
@@ -40,7 +36,7 @@ typora-root-url: ../../..
       <h3 class="archive__subtitle">{{ page.title }}</h3>
 ```
 
-
+<br>
 
 **다만, 최근 포스트부분이 subtitle이 2개가 생기는 오류가 있다. 이를 해결하는 방법은?**
 
@@ -64,9 +60,7 @@ typora-root-url: ../../..
   </div>
 ```
 
-
-
-
+<br>
 
 ### 밑줄 제거
 
@@ -79,7 +73,7 @@ typora-root-url: ../../..
 <a href="{{ post.url }}" style="text-decoration-line: none;">{{post.title}}</a>
 ```
 
-
+<br>
 
 **또는**
 
@@ -107,19 +101,15 @@ a {
 }
 ```
 
-
-
-
+<br>
 
 ### 이후사진
 
-![image-20220909164115281](/BH946.github.io/images/2022-09-06-blog 디자인 커스텀/image-20220909164115281.png)
+![image-20220909164115281](/images/2022-09-06-blog 디자인 커스텀/image-20220909164115281.png)
 
-<br>
+<br><br>
 
 ## page 화면 추가변경(글자 크기, 간격 등)
-
-
 
 ### 좌, 우측 너비 - Breakpoints
 
@@ -142,9 +132,7 @@ $x-large: 1400px !default;
 $max-width: $x-large !default;
 ```
 
-
-
-
+<br>
 
 ### 좌, 우측 너비 - Grid
 
@@ -167,9 +155,7 @@ $right-sidebar-width: 250px !default; // $x-large에서 설정됨
 $right-sidebar-width-wide: 350px !default; // $max-width인가? 적용된걸 못 봄
 ```
 
-
-
-
+<br>
 
 ### 폰트 크기 조절 - 기본
 
@@ -200,9 +186,7 @@ html {
 }
 ```
 
-
-
-
+<br>
 
 ### 웹 상단의 폰트 설정
 
@@ -218,9 +202,7 @@ html {
 	font-weight: bold;    // 추가
 ```
 
-
-
-
+<br>
 
 ### archive 부분 폰트 설정
 
@@ -247,7 +229,7 @@ html {
 }
 ```
 
-
+<br>
 
 **다음으로, 각 포스팅 제목들이 너무 붙어있어서 이 또한 간격을 추가하였다.**
 
@@ -267,15 +249,13 @@ html {
 }
 ```
 
-
-
-
+<br>
 
 ### 사이드바 폰트 설정
 
-![image-20220910184233000](/BH946.github.io/images/2022-09-06-blog 디자인 커스텀/image-20220910184233000.png) **이 사진처럼 이부분의 폰트 크기를 키워보겠다.**
+![image-20220910184233000](/images/2022-09-06-blog 디자인 커스텀/image-20220910184233000.png) **이 사진처럼 이부분의 폰트 크기를 키워보겠다.**
 
-
+<br>
 
 * `_sidebar.scss` 에서 수정하면 된다.
 
@@ -296,11 +276,11 @@ html {
 }
 ```
 
+<br>
 
+![image-20220910190201742](/images/2022-09-06-blog 디자인 커스텀/image-20220910190201742.png) 이 사진처럼 사이드바 아래부분은 이렇게 폰트 설정한다.
 
-![image-20220910190201742](/BH946.github.io/images/2022-09-06-blog 디자인 커스텀/image-20220910190201742.png) 이 사진처럼 사이드바 아래부분은 이렇게 폰트 설정한다.
-
-
+<br>
 
 * `navigation.scss` 에서 수정하면 된다.
 
