--- a/_posts/etc/Blog/2022-09-12-(Blog) 카테고리, 태그 모양 수정.md
+++ b/_posts/etc/Blog/2022-09-12-(Blog) 카테고리, 태그 모양 수정.md
@@ -18,7 +18,7 @@ typora-root-url: ../../..
 * `h2`로 감싸주며, 각각 margin을 적절히 주고, 날짜가 먼저 나오게 순서도 변경해준다
 * 그리고 카테고리는 진하게를 없애주고, 사이즈도 적절히 수정해준다
 
-```
+```html
 <h2 class="{{ include.type | default: 'list' }}__item" style="margin-top: 10px;">
   <article class="archive__item" itemscope itemtype="https://schema.org/CreativeWork" style="margin-bottom: 40px;">
     {% if include.type == "grid" and teaser %}
@@ -45,7 +45,7 @@ typora-root-url: ../../..
 </h2>
 ```
 
-
+<br>
 
 * `_base.scss` 에서 방문한 후 색변환을 없애고 싶어서 없애준다.
 
@@ -59,7 +59,7 @@ a {
 }
 ```
 
-
+<br>
 
 * `_page.scss` 에서 카테고리 모양을 마저 스타일링 한다.
 
