--- a/_posts/etc/Blog/2022-09-13-(Blog) 본문에 h1, h2 등등 소제목 스타일링.md
+++ b/_posts/etc/Blog/2022-09-13-(Blog) 본문에 h1, h2 등등 소제목 스타일링.md
@@ -17,7 +17,7 @@ typora-root-url: ../../..
 
 * `_page.scss` 에서 `page__content` 를 수정 해 볼것
   * **아래 코드 나타냈고, h2와 h3을 자주 사용해서 이것만 스타일링 하였다.**
-* `_base.scss` 에서 h1~h6는 거희 사이즈정도 정의해서 여긴 안봐도 될듯
+* `_base.scss` 에서 h1~h6는 거희 사이즈 정도만 정의해서 여긴 안봐도 될듯
 
 ```scss
 // _page.scss
@@ -43,7 +43,7 @@ typora-root-url: ../../..
 }
 ```
 
-<br>
+<br><br>
 
 ## 추후에 할 것
 
