--- a/_posts/Coding_Test/Baekjoon_Concept/2023-02-01-(백준)알고리즘 기초1 - 문제 모음.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-02-01-(백준)알고리즘 기초1 - 문제 모음.md
@@ -18,11 +18,9 @@ typora-root-url: ../../..
 
 **해당 게시물은 현재 문제를 푼 현황을 체크하기 위함이며, 무엇을 복습할지 한눈에 파악하기 위해서 작성되었다.**
 
-<br>
+<br><br>
 
 ## 문제 현황
-
-
 
 ### 200 - 자료구조 1
 
@@ -37,9 +35,7 @@ typora-root-url: ../../..
 - [조세퍼스 문제](https://bh946.github.io/baekjoontest/(C++)%EC%9A%94%EC%84%B8%ED%91%B8%EC%8A%A4-%EB%AC%B8%EC%A0%9C-%EB%B0%B1%EC%A4%801158/)
 - [덱](https://bh946.github.io/baekjoontest/(C++)%EB%8D%B1-%EB%B0%B1%EC%A4%8010866/)
 
-
-
-
+<br>
 
 ### 201 - 자료구조 1 (연습)
 
@@ -52,9 +48,7 @@ typora-root-url: ../../..
 
 - [오등큰수](https://bh946.github.io/baekjoontest/(C++)%EC%98%A4%EB%93%B1%ED%81%B0%EC%88%98-%EB%B0%B1%EC%A4%8017299/)
 
-
-
-
+<br>
 
 ### 203 - 자료구조 1 (참고)
 
@@ -68,9 +62,7 @@ typora-root-url: ../../..
 - [네 수](https://bh946.github.io/baekjoontest/(C++)%EB%84%A4-%EC%88%98-%EB%B0%B1%EC%A4%8010824/)
 - [접미사 배열](https://bh946.github.io/baekjoontest/(C++)%EC%A0%91%EB%AF%B8%EC%82%AC-%EB%B0%B0%EC%97%B4-%EB%B0%B1%EC%A4%8011656/)
 
-
-
-
+<br>
 
 ### 300 - 수학 1
 
@@ -83,9 +75,7 @@ typora-root-url: ../../..
   - 복습하기
 - [조합 0의 개수](https://bh946.github.io/baekjoontest/(C++)%EC%A1%B0%ED%95%A9-0%EC%9D%98-%EA%B0%9C%EC%88%98-%EB%B0%B1%EC%A4%802004/)
 
-
-
-
+<br>
 
 ### 301 - 수학 1 (연습)
 
@@ -100,9 +90,7 @@ typora-root-url: ../../..
 
 - [골드바흐 파티션](https://bh946.github.io/baekjoontest/(C++)%EA%B3%A8%EB%93%9C%EB%B0%94%ED%9D%90-%ED%8C%8C%ED%8B%B0%EC%85%98-%EB%B0%B1%EC%A4%8017103/)
 
-
-
-
+<br>
 
 ### 303 - 수학 1 (참고)
 
@@ -111,9 +99,7 @@ typora-root-url: ../../..
 - [Base Conversion](https://bh946.github.io/baekjoontest/(C++)Base-Conversion-%EB%B0%B1%EC%A4%8011576/)
 - [소인수분해](https://bh946.github.io/baekjoontest/(C++)%EC%86%8C%EC%9D%B8%EC%88%98%EB%B6%84%ED%95%B4-%EB%B0%B1%EC%A4%8011653/)
 
-
-
-
+<br>
 
 ### 400 - 다이나믹 프로그래밍 1
 
@@ -144,9 +130,7 @@ typora-root-url: ../../..
 
 - [합분해](https://bh946.github.io/baekjoontest/(C++)%ED%95%A9%EB%B6%84%ED%95%B4-%EB%B0%B1%EC%A4%802225/)
 
-
-
-
+<br>
 
 ### 401 - 다이나믹 프로그래밍 1 (연습)
 
@@ -174,9 +158,7 @@ typora-root-url: ../../..
 - [타일 채우기](https://bh946.github.io/baekjoontest/(C++)%ED%83%80%EC%9D%BC-%EC%B1%84%EC%9A%B0%EA%B8%B0-%EB%B0%B1%EC%A4%802133/)
   - 복습하기
 
-
-
-
+<br>
 
 
 ### 402 - 다이나믹 프로그래밍 1 (도전)
@@ -184,7 +166,7 @@ typora-root-url: ../../..
 - [RGB거리 2](https://bh946.github.io/baekjoontest/(C++)RGB%EA%B1%B0%EB%A6%AC-2-%EB%B0%B1%EC%A4%8017404/)
   - 복습하기
 
-<br>
+<br><br>
 
 ## Outro..
 
@@ -193,7 +175,7 @@ typora-root-url: ../../..
 * 복습을 많이.. 하자...ㅠ
 * 수학은 따로 정리해서 게시물을 올렸다..!
 
-
+<br>
 
 **C++로 풀고있으니까 관련 문법 꼭 기억하자..!!**
 
@@ -204,7 +186,7 @@ typora-root-url: ../../..
   * 정렬을 위한 `sort` 는 무슨 라이브러리 활용??
     * `#include <algorithm>` 
 
-  * 등등 .... 따로 정리해서 게시물을 올렸다..!!
+  * 등등 .... 따로 정리해서 게시물을 올렸다..!! (계속 정리하겠다!!)
 
 * **`using namespace std`  같이 네이밍 까먹지 말것!!**
 
