--- a/_posts/Git&Github/CLI_명령어/2022-07-31-GIT 기초 명령어.md
+++ b/_posts/Git&Github/CLI_명령어/2022-07-31-GIT 기초 명령어.md
@@ -10,12 +10,14 @@ sidebar:
 typora-root-url: ../../..
 ---
 
+
+
 ## GIT 사용법(CLI)
 
 * `GIT BASH` 사용(cmd같은 터미널)
 * `code .` 명령어를 통해 해당 폴더에서 vsCode 바로 실행 가능
 
-<br>
+<br><br>
 
 ## 기본
 
@@ -26,23 +28,21 @@ typora-root-url: ../../..
 * **git init**
 
 * **git clone http...주소복사 한것**
-* 추가로 **git pull** 사용시 변경된 내용있으면 가져올 수 있음
+* 추가로 **git pull** 사용시 깃헙에 변경된 내용있으면 로컬로 가져올 수 있음
 
-
-
-
+<br>
 
 ### Git 내용 배포할때
 
 * **git status로 상태 확인** - 추가한 파일, 수정된 파일 등등 변경사항을 먼저 체크하는 것
 
-* **git log로 push 확인** - 기록 확인하는 용도
+* **git log로 push 확인** - 기록 확인하는 용도. `q` 로 탈출
 * **git init** - `.git` 폴더 생성
 * **git add .** - 한번에 전체 코드 추가(git add 파일/폴더명 입력시 해당 파일/폴더만 깃 추가)
 * **git commit -m "revise"** - 원하는 코멘트 달면 되고, 커밋을 의미
-* **git push -u origin main** - 로컬에서 origin 프로젝트이름의 main브랜치를 push함(깃의 브랜치도 main으로 보고 하는중)
+* **git push -u origin main** - 로컬에서 origin 프로젝트 이름의 main브랜치를 push함(깃의 브랜치 main과 매핑)
 
-<br>
+<br><br>
 
 ## 조금 심화(branch)
 
@@ -53,15 +53,17 @@ typora-root-url: ../../..
 
 * **git remote add origin https://github.com/BH946/fullstack-clone.git** - 로컬과 git과의 연결 예시
 
+<br>
+
 만약 `git 홈페이지에` 이미 존재하는 브랜치에 `push할 생각`이 아니라면 `pull 생략` 가능.
 
 * **git pull origin shop-cart-ui** - `pull`을 먼저 해줘야 `연결 및 데이터도 문제 없게 올릴 수 있어`서 하는 작업.
-
 * **git branch -a** - `로컬 브랜치` 확인
   **git branch -r** - `git 브랜치` 확인
-
 * **git checkout 브랜치명** - 원하는 브랜치명으로 변경
   **git checkout -b 브랜치명** - 원하는 브랜치명으로 변경해주면서 브랜치 없으면 새로 생성까지
+
+<br>
 
 만약 `새로운 브랜치`를 만드는 것이면 그대로 `위과정 진행`하면 되고,   
 `기존 git의 브랜치`에 적용하려는 것이면 반드시 기존 브랜치와 `동일한 이름으로 checkout`을 해줄것.
@@ -73,11 +75,11 @@ typora-root-url: ../../..
 `로컬 브랜치명`과 동일한 git의 브랜치가 없으면,  새로 git에 브랜치를 생성하기 때문에   
 새로운 브랜치를 만들수 있는 것이다.
 
-즉, 깃 홈페이지에서 브랜치들과 로컬에서 브랜치들 관리하는것은 유사하다.
+<br>
 
+깃 홈페이지에서 브랜치들과 로컬에서 브랜치들 서로 상호관계를 가지며 관리하는 것이다.
 
-
-
+<br>
 
 ### Git branch 가져올때
 
@@ -87,14 +89,13 @@ typora-root-url: ../../..
 * **git remote add origin https://github.com/BH946/fullstack-clone.git** - git과 연결
 * **git pull origin shop-cart-ui** - 원하는 브랜치를 pull 명령어로 가져옴
 
-
+<br>
 
 #### clone 방법
 
-* **git init**
+* **git init** => 필요 없을걸 아마??
 
 * **git clone --single-branch -b shop-cart-ui https://github.com/BH946/fullstack-clone.git**
-
 
 
 
