--- a/_posts/etc/Blog/2022-09-07-(Blog) 페이지 화면 커스텀(크기, 너비, 밑줄 등).md
+++ b/_posts/etc/Blog/2022-09-07-(Blog) 페이지 화면 커스텀(크기, 너비, 밑줄 등).md
@@ -44,11 +44,13 @@ typora-root-url: ../../..
 * 따라서 이 부분을 지우고, `_layouts/archive.html` 에서 아래 코드로 수정한다.
   * nil은 null을 의미
 * 또한 `archive__subtitle__default` 를 `archive.scss`에 추가로 정의해둔다!
+  * 아래 `{% %}` 문법이 자꾸 실행되어서 아래 코드에선 주석. 실제론 주석 없애야 합니다.
 
-```
-  <div class="archive">
+
+```html
+<!--  
+<div class="archive">
     {% unless page.header.overlay_color or page.header.overlay_image %}
-      <!-- <h1 id="page-title" class="page__title">{{ page.title }}</h1> 수정전 -->
       {% if page.title != nil %}
         <h3 class="archive__subtitle">{{ page.title }}</h3>
       {% endif %}
@@ -57,7 +59,8 @@ typora-root-url: ../../..
       {% endif %}
     {% endunless %}
     {{ content }}
-  </div>
+  </div> 
+-->
 ```
 
 <br>
