--- a/_posts/etc/Blog/2022-09-08-(Blog) 프로필 커스텀 및 기능들 이름 수정.md
+++ b/_posts/etc/Blog/2022-09-08-(Blog) 프로필 커스텀 및 기능들 이름 수정.md
@@ -31,7 +31,11 @@ typora-root-url: ../../..
   
 * 사진 추가는 아래 `_config.yml`를 참고
 
-```
+  * `{% %}` 문법이 자꾸 실행되어서 아래 코드에선 주석. 실제론 주석 없애고 사용해야합니다.
+
+
+```html
+<!--
 {% if author.avatar %}
     <div class="author__avatar">
       <a href="{{ author.home | default: '/' | absolute_url }}">
@@ -39,6 +43,7 @@ typora-root-url: ../../..
       </a>
     </div>
 {% endif %}
+-->
 ```
 
 <br>
