docs : 왜자꾸 수정이 안되니

--- a/_posts/etc/Blog/2022-09-07-(Blog) 페이지 화면 커스텀(크기, 너비, 밑줄 등).md
+++ b/_posts/etc/Blog/2022-09-07-(Blog) 페이지 화면 커스텀(크기, 너비, 밑줄 등).md
@@ -46,6 +46,9 @@ typora-root-url: ../../..
   * nil은 null을 의미
   
 * 또한 `archive__subtitle__default` 를 `archive.scss`에 추가로 정의해둔다!
+  
+* asdfasdfsdfjksldfd
+  
   * 아래 `{% %}` 문법이 자꾸 실행되어서 아래 코드에선 주석. 실제론 주석 없애야 합니다.
   
     
