--- a/_posts/etc/Blog/2022-09-14-(Blog) 페이지 화면 커스텀(크기, 너비, 밑줄 등) - 복사본.md
+++ b/_posts/etc/Blog/2022-09-14-(Blog) 페이지 화면 커스텀(크기, 너비, 밑줄 등) - 복사본.md
@@ -1,5 +1,5 @@
 ---
-title:  "[Blog] 페이지 화면 커스텀(크기, 너비, 밑줄 등)"
+title:  "[Blog] 페이지 화면 커스텀(크기, 너비, 밑줄 등)2323"
 categories : Blog
 tag : [블로그, Git, git blog, 깃허브 블로그, Minimal-mistakes, 지킬, jekyll]
 toc: true
