--- a/_posts/etc/Blog/2022-09-14-(Blog) 페이지 화면 커스텀(크기, 너비, 밑줄 등) - 복사본.md
+++ b/_posts/etc/Blog/2022-09-14-(Blog) 페이지 화면 커스텀(크기, 너비, 밑줄 등) - 복사본.md
@@ -49,25 +49,13 @@ typora-root-url: ../../..
   
 * asdfasdfsdfjksldfd
   
-  * 아래 `{% %}` 문법이 자꾸 실행되어서 아래 코드에선 주석. 실제론 주석 없애야 합니다.
+  * 아래 `` 문법이 자꾸 실행되어서 아래 코드에선 주석. 실제론 주석 없애야 합니다.
   
     
 
 
 ```html
-<!--  
-<div class="archive">
-    {% unless page.header.overlay_color or page.header.overlay_image %}
-      {% if page.title != nil %}
-        <h3 class="archive__subtitle">{{ page.title }}</h3>
-      {% endif %}
-      {% if page.title == nil %}
-        <h3 class="archive__subtitle__default">{{ "Recent Posts" }}</h3>
-      {% endif %}
-    {% endunless %}
-    {{ content }}
-  </div> 
--->
+
 ```
 
 <br>
