--- a/_posts/etc/Blog/2023-03-14-(Blog) 왜 안돼.md
+++ b/_posts/etc/Blog/2023-03-14-(Blog) 왜 안돼.md
@@ -1,7 +1,7 @@
 ---
-title:  "[Blog] 페이지 화면 커스텀(크기, 너비, 밑줄 등)2323"
+title:  "[Blog] 왜 안돼지"
 categories : Blog
-tag : [블로그, Git, git blog, 깃허브 블로그, Minimal-mistakes, 지킬, jekyll]
+tag : [블로그, Git, git blog, 깃허브 블로그, Minimal-mistakes, 지킬]
 toc: true
 toc_sticky: true
 author_profile: false
