--- a/_posts/Coding_Test/Programmers_Test/2023-03-04-(MySQL)LV 3 문제 모음.md
+++ b/_posts/Coding_Test/Programmers_Test/2023-03-04-(MySQL)LV 3 문제 모음.md
@@ -185,3 +185,31 @@ order by r.food_type desc;
 
 <br><br>
 
+## 문제 6
+
+* **[조건별로 분류하여 주문상태 출력하기](https://school.programmers.co.kr/learn/courses/30/lessons/131113)**
+* **조건문을 여러개 사용하는 방법과 date를 format하는 방법을 익힐수 있다.**
+
+<br>
+
+### 코드
+
+```mysql
+-- 코드를 입력하세요
+SELECT order_id, product_id, date_format(out_date, "%Y-%m-%d"), (case when out_date<=Date(20220501) then "출고완료" when out_date>Date(20220501) then "출고대기" else "출고미정" end) as 출고여부 from food_order order by order_id asc;
+```
+
+<br>
+
+### 풀이
+
+**`(case when out_date<=Date(20220501) then "출고완료" when out_date>Date(20220501) then "출고대기" else "출고미정" end)` 처럼 조건문을 여러개 사용하는 법을 알자.**
+
+*  `case when ... then ... when ... then ... else ... end` 이런 형태!!
+
+**`date_format(out_date, "%Y-%m-%d")` 예전 문제에서 사용해봤던 함수!!**
+
+* 자꾸 까먹게 되는데, 꼭 기억해두자.
+
+<br><br>
+
