--- a/_posts/etc/Blog/2022-09-07-(Blog) 페이지 화면 커스텀(크기, 너비, 밑줄 등).md
+++ b/_posts/etc/Blog/2022-09-07-(Blog) 페이지 화면 커스텀(크기, 너비, 밑줄 등).md
@@ -46,8 +46,8 @@ typora-root-url: ../../..
 * 또한 `archive__subtitle__default` 를 `archive.scss`에 추가로 정의해둔다!
 
 
-```html
-<!--  
+```ruby
+=begin
 <div class="archive">
     {% unless page.header.overlay_color or page.header.overlay_image %}
       {% if page.title != nil %}
@@ -59,7 +59,7 @@ typora-root-url: ../../..
     {% endunless %}
     {{ content }}
   </div> 
--->
+=end
 ```
 
 <br>
