docs : 본문 수정(오류_)

--- a/_posts/etc/Blog/2022-09-07-(Blog) 페이지 화면 커스텀(크기, 너비, 밑줄 등).md
+++ b/_posts/etc/Blog/2022-09-07-(Blog) 페이지 화면 커스텀(크기, 너비, 밑줄 등).md
@@ -44,23 +44,9 @@ typora-root-url: ../../..
 * 따라서 이 부분을 지우고, `_layouts/archive.html` 에서 아래 코드로 수정한다.
   * nil은 null을 의미
 * 또한 `archive__subtitle__default` 를 `archive.scss`에 추가로 정의해둔다!
+* `%` 와 `{` 를 함께 사용하는 ruby 문법이 있는데, 이 문법이 자꾸 실행이되기 때문에 사진으로 코드 대체
 
-
-```ruby
-=begin
-<div class="archive">
-    {% unless page.header.overlay_color or page.header.overlay_image %}
-      {% if page.title != nil %}
-        <h3 class="archive__subtitle">{{ page.title }}</h3>
-      {% endif %}
-      {% if page.title == nil %}
-        <h3 class="archive__subtitle__default">{{ "Recent Posts" }}</h3>
-      {% endif %}
-    {% endunless %}
-    {{ content }}
-  </div> 
-=end
-```
+![image-20230315021636448](/images/2022-09-07-(Blog) 페이지 화면 커스텀(크기, 너비, 밑줄 등)/image-20230315021636448.png)
 
 <br>
 
