--- a/_posts/etc/Blog/2022-09-12-(Blog) 카테고리, 태그 모양 수정.md
+++ b/_posts/etc/Blog/2022-09-12-(Blog) 카테고리, 태그 모양 수정.md
@@ -18,9 +18,9 @@ typora-root-url: ../../..
 * `h2`로 감싸주며, 각각 margin을 적절히 주고, 날짜가 먼저 나오게 순서도 변경해준다
 * 그리고 카테고리는 진하게를 없애주고, 사이즈도 적절히 수정해준다
 
-```html
-ㅅㅂ
-```
+* `%` 와 `{` 를 함께 사용하는 ruby 문법이 있는데, 이 문법이 자꾸 실행이되기 때문에 사진으로 코드 대체
+
+![image-20230315021926188](.\images\2022-09-12-(Blog) 카테고리, 태그 모양 수정\image-20230315021926188.png)
 
 <br>
 
