--- a/_posts/etc/Blog/2022-09-08-(Blog) 프로필 커스텀 및 기능들 이름 수정.md
+++ b/_posts/etc/Blog/2022-09-08-(Blog) 프로필 커스텀 및 기능들 이름 수정.md
@@ -31,11 +31,9 @@ typora-root-url: ../../..
   
 * 사진 추가는 아래 `_config.yml`를 참고
 
+* `%` 와 `{` 를 함께 사용하는 ruby 문법이 있는데, 이 문법이 자꾸 실행이되기 때문에 사진으로 코드 대체
 
-
-```html
-와 자꾸 안됩니꽈
-```
+![image-20230315021822610](.\images\2022-09-08-(Blog) 프로필 커스텀 및 기능들 이름 수정\image-20230315021822610.png)
 
 <br>
 
