docs : 게시글 수정

--- a/_posts/Knowledge/Knowledge/2022-06-28-테스트 코드(TDD).md
+++ b/_posts/Knowledge/Knowledge/2022-06-28-테스트 코드(TDD).md
@@ -10,8 +10,23 @@ sidebar:
 typora-root-url: ../../..
 ---
 
-https://resilient-923.tistory.com/327
 
-참고
 
-JS에서 많이 사용하는 테스트 툴인 Jest에 대해서도 알아볼 것
+## TDD
+
+
+
+## 테스트 코드
+
+* **참고 : https://resilient-923.tistory.com/327**
+
+* JS에서 많이 사용하는 테스트 툴인 `Jest` 에 대해서도 알아볼 것
+
+<br>
+
+**참고로 필자는 `spring` 공부를 하다가 테스트 코드에 접하게 되었다.**
+
+**테스트 코드를 잘 작성하는것이 매우매우 중요하다. (유지보수가 훨씬 향상)**
+
+**또한, 단위적으로 테스트코드를 작성하는게 매우매우 중요하다.  
+즉, 전체적으로 테스트하는 코드가 아니라 부분부분 나눠서 테스트코드를 작성하는것을 강력 권장한다.**
