--- a/_posts/Knowledge/Knowledge/2022-08-05-도메인, SEO, 구글 애널리틱스 사용법.md
+++ b/_posts/Knowledge/Knowledge/2022-08-05-도메인, SEO, 구글 애널리틱스 사용법.md
@@ -31,7 +31,7 @@ typora-root-url: ../../..
   * 그에 맞는 IP를 DNS가 응답을 하고, 해당 IP로 서버에 HTML파일을 요청하는 것이다.
 * `결론 : DNS에 등록만 하면 된다고 이해하면 된다.`
 
-<br>
+<br><br>
 
 ## 도메인 등록
 
@@ -44,7 +44,7 @@ typora-root-url: ../../..
 
 * 결제 후 시간이 소요되고 나면, DNS 관리창에서 등록된 도메인을 확인할 수 있다.
 
-
+<br>
 
 `netlify` 에 https로 보안을 해준다던지, 간단한 호스팅 등등 기능이 좀 많기 때문에 `gabia`에서 도메인 등록후  
 `netlify` 에 도메인 연결해둬서 사용하겠다!
@@ -56,7 +56,7 @@ typora-root-url: ../../..
   * 직접 파일을 올려서 사이트 수정할 수 있고, 깃과 연동시 깃 push하면 자동으로 반영
   * 참고로 테스트여도 당연히 index.html로 올려줄것
 
-
+<br>
 
 그리고 만약 **Check DNS configuration** 들어가서 하는건 내가 구입한 `gabia` 의 DNS를 사용  
 **Set up Netlify DNS** 로 들어가서 하는건 `netlify` 의 DNS를 사용
@@ -68,7 +68,7 @@ typora-root-url: ../../..
 
 
 
-
+<br>
 
 이게 뜨면 그림 아래에 4개의 URL이 나오는데 이것으로 `gabia`에서 네임서버 설정에서 변경해준다.
 
@@ -78,16 +78,16 @@ typora-root-url: ../../..
 
 ![image-20220805182405646](/images/2022-08-05-도메인, SEO 사용법/image-20220805182405646.png)
 
-
+<br>
 
 마지막 HTTPS로 보안은 무료로 평생 제공해준다.  
 적용 시간은 조금 걸리는 편이다.
 
-<br>
+<br><br>
 
 ## Favicon 적용
 
-아래 그림을 의미함.
+**아래 그림을 의미함.**
 
 ![image-20220805183835081](/images/2022-08-05-도메인, SEO 사용법/image-20220805183835081.png)
 
@@ -102,30 +102,29 @@ typora-root-url: ../../..
 <link rel="icon" href="/favicon.ico" type="image/x-icon">
 ```
 
-
+<br>
 
 그리고 그림처럼 이곳에 파일을 올리는데 편하게 폴더 전체 한번에 올려주자.
 
 ![image-20220805184939940](/images/2022-08-05-도메인, SEO 사용법/image-20220805184939940.png)
 
-<br>
+<br><br>
 
 ## 검색 엔진
 
 **크롤러 로봇이 정보 수집하는 원리는?**
 
 * `robot.txt` 를 읽어서 정보 수집하기 전에 접근해도 되는지 정책을 먼저 이해한다
-
 * 접근해도 된다면, 들어가는데 `sitemap.xml` 을 먼저 본다.
   * 이 사이트에 어떤 URL들이 있는지 그런 경로들을 알아보는 것이다.
   * 그것을 통해서 로봇이 이 사이트는 이렇게 생겼구나 판단
 * 인식한 그 사이트 URL들로 접속을 해서 사이트에 있는 정보를 가져오게 된다.
 
-따라서 `robot.txt, sitemap.xml` 을 잘 수정하면 좀 더 검색이 잘 될 수 있다.
+<br>
 
+**따라서 `robot.txt, sitemap.xml` 을 잘 수정하면 좀 더 검색이 잘 될 수 있다.**
 
-
-
+<br>
 
 ### Naver
 
@@ -134,7 +133,7 @@ typora-root-url: ../../..
 웹마스터 도구로 입장해서 본인 도메인 사이트 넣어서 시키는대로 하면 된다.  
 => 소유권 확인할때 서버에도(netify) 꼭 업데이트 해줘야 함!
 
-
+<br>
 
 `robot.txt` 를 수정해 보겠다.
 
@@ -143,20 +142,20 @@ typora-root-url: ../../..
 
 ![image-20220805191523727](/images/2022-08-05-도메인, SEO 사용법/image-20220805191523727.png)
 
-
+<br>
 
 `sitemap.xml` 도 다운받아서 같이 서버에 올려보겠다.
 
 * [sitemap](https://www.xml-sitemaps.com) 사이트에서 본인 도메인 입력후 start하고 다운을 받는다.
 * 이 또한 root폴더에 같이 둔다.
 
-
+<br>
 
 그리고 `robot.txt`를 수정해준다. (본인 도메인으로)
 
 ![image-20220805192008183](/images/2022-08-05-도메인, SEO 사용법/image-20220805192008183.png)
 
-
+<br>
 
 **마지막으로 서버에 적용**
 
@@ -165,25 +164,25 @@ typora-root-url: ../../..
 
 ![image-20220805192201720](/images/2022-08-05-도메인, SEO 사용법/image-20220805192201720.png)
 
+<br>
+
 네이버 웹마스터 도구에서 `robots.txt` 가 잘 적용이 되었나 확인
 
 <img src="/images/2022-08-05-도메인, SEO 사용법/image-20220805192532614.png" alt="image-20220805192532614" style="zoom: 80%;" />
 
-
+<br>
 
 `sitemap.xml` 도 잘 제출이 되었나 확인
 
 <img src="/images/2022-08-05-도메인, SEO 사용법/image-20220805192622747.png" alt="image-20220805192622747" style="zoom:80%;" />
 
-
+<br>
 
 `Yeti(네이버 검색 봇)`가 이제 잘 찾을텐데, 그래도 웹마스터 도구에서 최적화 보면 안된게 조금 있다.
 
 <img src="/images/2022-08-05-도메인, SEO 사용법/image-20220805192829094.png" alt="image-20220805192829094" style="zoom:80%;" />
 
-
-
-
+<br>
 
 ### Google
 
@@ -193,15 +192,13 @@ typora-root-url: ../../..
 
 <img src="/images/2022-08-05-도메인, SEO 사용법/image-20220805193406764.png" alt="image-20220805193406764" style="zoom: 80%;" />
 
-
+<br>
 
 **그리고 소유권 주장을 성공해야 한다.**
 
 <img src="/images/2022-08-05-도메인, SEO 사용법/image-20220805193817423.png" alt="image-20220805193817423" style="zoom: 80%;" />
 
-
-
-
+<br>
 
 `netlify`에서 **Go to DNS panel** 로 접근하면 DNS 레코드를 설정할 수 있다.
 
@@ -213,7 +210,7 @@ typora-root-url: ../../..
 
 <img src="/images/2022-08-05-도메인, SEO 사용법/image-20220805193942406.png" alt="image-20220805193942406" style="zoom:80%;" />
 
-
+<br>
 
 그리고 `sitemap.xml` 을 설정한다
 
@@ -221,11 +218,9 @@ typora-root-url: ../../..
 
 ![image-20220805194126821](/images/2022-08-05-도메인, SEO 사용법/image-20220805194126821.png)
 
-
-
 `robots.txt` 는 따로 설정하는 부분이 안보이는데, 아마 자동으로 등록 된것일거다.
 
-<br>
+<br><br>
 
 ## SEO - 검색 엔진 최적화
 
@@ -235,7 +230,7 @@ typora-root-url: ../../..
 
 => 해당 사이트대로 하면 된다.
 
-
+<br>
 
 **검색이 잘되는 방법은 외부, 내부 방식이 있는데 외부보단 내부만 수정하는것을 추천**
 
@@ -251,7 +246,7 @@ typora-root-url: ../../..
   * 점수도 알려주고, 무엇을 더 수정해야할지도 알려준다!
   * 꿀팁 : 돈내라고 로그인하라고 뜨는데 개발자 모드에서 해당부분 Delete해주면 지우고 볼 수 있음!!
 
-<br>
+<br><br>
 
 ## 사용자 분석
 
@@ -261,17 +256,19 @@ typora-root-url: ../../..
 
 ![image-20220805201332762](/images/2022-08-05-도메인, SEO 사용법/image-20220805201332762.png)
 
+<br>
+
 태그 안내를 클릭해서 내부의 코드를 \<head> 태그에 넣기
 
 * 해당 웹 페이지 방문때마다 코드가 실행 되어서 구글analytics로 정보가 전달 되는형태이다.
 
 ![image-20220805201744128](/images/2022-08-05-도메인, SEO 사용법/image-20220805201744128.png)
 
-
+<br>
 
 구글 애널리틱스를 통해서 분석할 수 있는게 정말 많으므로 더욱 알고싶다면 검색해서 알아볼것
 
-<br>
+<br><br>
 
 ## 마무리
 
@@ -287,8 +284,8 @@ typora-root-url: ../../..
 
 * 아마도 `netlify`는 FTP와 연동이 안되는것 같다.
 
-  
+
+<br>
 
 즉, `호스팅 + 도메인` 으로 하나의 홈페이지를 만들수 있는것이다.
-
 
