--- a/_posts/Coding_Test/Programmers_Test/2023-03-04-(MySQL)LV 3 문제 모음.md
+++ b/_posts/Coding_Test/Programmers_Test/2023-03-04-(MySQL)LV 3 문제 모음.md
@@ -213,3 +213,29 @@ SELECT order_id, product_id, date_format(out_date, "%Y-%m-%d"), (case when out_d
 
 <br><br>
 
+## 문제 7
+
+* **[헤비 유저가 소유한 장소](https://school.programmers.co.kr/learn/courses/30/lessons/77487)**
+
+<br>
+
+### 코드
+
+```mysql
+# -- 코드를 입력하세요
+SELECT id, name, host_id from places where host_id in (select host_id from places group by host_id having count(*)>=2) order by id;
+```
+
+<br>
+
+### 풀이
+
+**`where host_id in (select host_id from places group by host_id having count(*)>=2)` 이부분이 핵심인 문제!!**
+
+* 여러가지 방법들이 있겠지만, 필자의 생각에는 `host_id` 가 동일한 튜플을 카운트해서 2이상이면 된다고 생각했다.
+  * 카운트는 `host_id`로 그룹핑을 해서 `count(*)` 함수를 사용!!
+* 다만, 여기서 출력에는 그룹핑을 하면 안되니까 `in 쿼리문` 으로 따로 구한것!!
+  * 마지막으로 `where` 문에 `in 쿼리문` 을 한 이유는 `0 or 1` 로 쿼리문 반환하기 때문에 조건문 자리인 `where` 문에 적용!!
+
+<br><br>
+
