--- a/_posts/Coding_Test/Programmers_Test/2023-03-04-(MySQL)LV 3 문제 모음.md
+++ b/_posts/Coding_Test/Programmers_Test/2023-03-04-(MySQL)LV 3 문제 모음.md
@@ -239,3 +239,35 @@ SELECT id, name, host_id from places where host_id in (select host_id from place
 
 <br><br>
 
+## 문제 8
+
+* **[오랜 기간 보호한 동물(2)](https://school.programmers.co.kr/learn/courses/30/lessons/59411)**
+
+<br>
+
+### 코드
+
+```mysql
+-- 코드를 입력하세요
+# 보호기간은 outs의 datetime - ins의 datetime
+# 눈여겨 볼것은 order by 뒤에 바로 b.datetime-a.datetime!!!
+# 또한 limit 2로 상위 2개 튜플 출력!!
+SELECT b.animal_id, b.name from animal_ins a join animal_outs b on (b.animal_id=a.animal_id) order by b.datetime-a.datetime desc limit 2;
+```
+
+<br>
+
+### 풀이
+
+**`SELECT b.animal_id, b.name from animal_ins a join animal_outs b on (b.animal_id=a.animal_id)` 처럼 적절히 조인문을 사용하는것도 중요!!**
+
+* 애초에 외래키를 알려줬으므로 조인문을 사용해보는것을 바로 떠올렸던 문제이다.
+* 또한, `animal_outs` 테이블에 접근해서 칼럼들을 가져오는게 옳다.
+
+**`order by b.datetime-a.datetime desc limit 2;` 개인적으로 이부분이 핵심!!**
+
+* `order by` 부분에 칼럼명에 적는형태를 바로 적을 수 있다는점!!!
+* 또한, `limit` 를 통해서 상위 지정된 개수만큼 튜플만 가져올 수 있다!
+
+<br><br>
+
