--- a/_posts/Language/C++/2021-08-23-(C++)기초 정리.md
+++ b/_posts/Language/C++/2021-08-23-(C++)기초 정리.md
@@ -9,52 +9,66 @@ sidebar:
   nav: "docs"
 ---
 
-## C++언어 정리
 
-### 1장 :: 시작
 
-소스(.cpp)(소스파일) -> 어셈블리어(.obj)(목적파일) -> 기계어(.exe)(바이너리 파일)
+# C++언어 정리
+
+## 1장 :: 시작
+
+소스(.cpp)(소스파일) -> 어셈블리어(.obj)(목적파일) -> 기계어(.exe)(바이너리 파일)  
                         **컴파일                           어셈블(링킹)**
-링킹 : 목적 파일(.obj)끼리 합쳐 실행 파일을 만드는 과정. 목적파일과 C++라이브러리의 연결
-=> 목적 파일은 바로 실행할 수 없음.
 
-표준 / 비표준 C++ 프로그램!!
-=> 비표준은 예로 Visual C++ 프로그램있고, Visual전용 키워드로 코드 작성시
-     Visual 컴파일러에서만 사용 가능
+* 링킹 : 목적 파일(.obj)끼리 합쳐 실행 파일을 만드는 과정. 목적파일과 C++라이브러리의 연결  
+  => 목적 파일은 바로 실행할 수 없음.
 
-compile time : 컴파일 오류
-runtime : 런타임 오류
-logical : 논리 오류
+* 표준 / 비표준 C++ 프로그램!!
+  => 비표준은 예로 Visual C++ 프로그램있고, Visual전용 키워드로 코드 작성시  
+       Visual 컴파일러에서만 사용 가능
+
+<br>
+
+compile time : 컴파일 오류  
+runtime : 런타임 오류  
+logical : 논리 오류  
 => **오류 3가지**이며, 이녀석을 고치는게 **디버깅**
+
+<br>
 
 **객체 지향 개념 도입** : 캡슐화(class), 상속, 다형성(연산자 중복, 오버로딩, 오버라이딩)
 
-C 언어에서 추가한 기능? 
-=> 함수중복, 디폴트 매개변수, 참조와 참조변수, 참조에 의한 호출, new/delete 연산자
+**C++로 넘어오면서 C언어에서 추가된 기능?**   
+=> 함수중복, 디폴트 매개변수, 참조와 참조변수, 참조에 의한 호출, new/delete 연산자  
      연산자 재정의, 제네릭 함수와 클래스
 
-### 2장 :: struct와 class를 많이 비교 설명
+<br><br>
 
-true = 1, false = 0 // 기본적으로 boolean값은 이거다.
-'-'은 문자, "-"은 문자열
-**:: 는 범위 지정 연산자이다.**
-**c++에서는 std::endl;을 많이 사용해서 \n역할을 함.(둘다 알아두기)**
+## 2장 :: struct와 class를 많이 비교 설명
 
-**int main() 함수 : C++프로그램 실행을 시작하는 함수. void main()은 표준 아님.**
-#include \<iostream> : 앞은 전처리기에게 내리는 지시, 뒤는 헤더 파일
+**`true = 1, false = 0` : 기본적으로 boolean값은 이거다.  
+`'-'` 은 문자, `"-"` 은 문자열**
 
-**namespace 이름공간!!**
-std:: => C++ 표준에서 정의한 이름 공간
-std:: 생략하려면 using 지시어 사용
-따라서
-**using namespace std;** 
-=> 여기서 알아 가야할 점은 using std::cout; 이런식으로 하나하나 따로 선언이 좋음.
+<br>
+
+**int main() 함수 : C++프로그램 실행을 시작하는 함수. void main()은 표준 아님.**  
+**`#include <iostream>` : 앞은 전처리기에게 내리는 지시(include), 뒤는 헤더 파일(iostream)**
+
+<br>
+
+**:: 는 범위 지정 연산자이다.**  
+**c++에서는 std::endl;을 많이 사용하는데 ''\n''역할을 함.(둘다 알아두기)**
+
+**namespace 이름공간!!**  
+std:: => C++ 표준에서 정의한 이름 공간   
+std:: 생략하려면 using 지시어 사용  
+따라서  
+**using namespace std;**   
+=> 여기서 알아 가야할 점은 using std::cout; 이런식으로 하나하나 따로 선언이 좋음.  
      다른 개발자들이 만약 std::로 사용하면 에러 발생하기 때문에 알고 넘어가자.
 
-'>>' 와 '<<' 는 in, out 이다.
+**'>>' 와 '<<' 는 in, out 이다.**  
 scanf => cin, printf => cout
 
-ex)
+```c++
 namespace kitae { // 이름공간 정의
   int f(){return 1;}
   void m(){std::cout << f();}
@@ -63,145 +77,185 @@ int f() { return -1;}
 void g() { std::cout << f(); }
 
 int main() {
-  std::cout<<kitae::f();
-  std::cout<<f();
-  g();
-  kitae::m();
+  std::cout<<kitae::f(); // 1
+  std::cout<<f(); // -1
+  g(); // -1
+  kitae::m(); // 1 (이부분이 핵심)
 }
+```
 
-**=> 출력값은 1-1-11**
+* **만약 namespace kitae안에 함수를 쓰고싶으면? kitae::f(); 이런식으로 사용.**
 
-**=> 만약 namespace kitae안에 함수를 쓰고싶으면? kitae::f(); 이런식으로 사용.**
+<br>
 
-**C++의 문자열 표현 방식** : 2가지
+### C++의 문자열 표현 방식 : 2가지
 
-**1.C-스트링 방식 - '\0'로 끝나는 문자 배열 => 문자열**
-단순 문자 배열 - 그냥 배열 그자체(단순 배열)
-EX) char name[10] = "Grace"; 이면 마지막에 \0이고, 나머지도 '\0'로 초기화
-  만약 여기서 cin으로 입력 받을시 마 이 클로 입력시 빈 칸을 만나면 문자열 입력 종료
-  따라서 마\0\0\0\0.. 이런식으로 배열 초기화 됨.
-그럼 공백이 낀 문자열 받는 방법? 한줄!!
-=> cin.getline( , , );이용
+**C-스트링 방식 : '\0'로 끝나는 문자 배열(=문자열)**
 
-**cin.getline(char buf[], int size, char delimitChar) : 공백이 낀 문자열 입력 받기**
-=> 문자열 입력시 맨뒤에 delimitChar을 입력시 종료(구분자)
-cin은 입력버퍼가 있다. 따라서 delimitChar의 기본값은 '\n' 이며, 엔터키를 입력시 종료
-=> 끝에 '\0'가 붙음.
+* **단순 문자 배열 : 그냥 배열 그 자체(단순 배열)**
+  * EX) `char name[10] = "Grace";` 이면 마지막에 '\0'이고, 나머지 index도 '\0'로 초기화
+  * 만약 여기서 `cin` 으로 입력 받을시?? 빈 칸을 만나면 문자열 입력 종료
+  * 그럼 공백이 낀 문자열(한줄!!) 받는 방법? 
+    * `cin.getline( , , );`
 
-C언어에서의 함수 사용가능!
-strcmp(), strlen(), strcpy() 등이 있는데 \<cstring>이나 <string.h> 을 사용
-C++의 표준 방식은 \<cstring>이므로 이렇게 사용을 권장.
-strcmp()는 문자열 비교인데 같으면 0반환, 다르면 1을 반환
+* **cin.getline(char buf[], int size, char delimitChar) : 공백이 낀 문자열 입력 받기**
+  * 문자열 입력시 맨뒤에 delimitChar을 입력시 종료(구분자)  
+  * `cin` 은 입력버퍼가 있다. 따라서 delimitChar의 기본값은 '\n' 이며, 엔터키를 입력시 종료
+    * 참고로 끝에 '\0'가 붙음.
+* C언어에서의 함수 사용가능!
+  * strcmp(), strlen(), strcpy() 등이 있는데 \<cstring>이나 <string.h> 을 사용
+    * strcmp()는 문자열 비교인데 같으면 0반환, 다르면 1을 반환
+    * strlen()은 char배열로 만든 문자열의 길이 구해줌
+    * strcpy()는 문자열 복제
+  * C++의 표준 방식은 \<cstring>이므로 이렇게 사용을 권장.
 
-**2.이런것들 보다 제일 좋은것은 string 클래스이다!!!**
-\<string> 필요
-**cin.getline()은 char**서 쓰지만, **getline()은 string**에서 쓴다. 이게 훨씬 좋음!!
-getline()은 getline(cin, 문자열) 형식으로 사용
-그리고 +연산자로 문자열 연결 가능
-**또 if(singer == elvis) // 문자열 비교 바로 가능!!(C에서는 주소로 왔던거 기억 char[]이였기 때문에)**
+<br>
 
-C++헤더파일은 확장자가 없다. \<cstring>, \<string>
-**#include <헤더파일> 이면 원래** 있는 헤더파일 위치이다.
-**#include "헤더파일" 은 사용자 정의** 헤더파일 위치이다.
+**이런것들 보다 제일 좋은것은 string 클래스 방식이다!!!**
 
-질문?
+* `<string>` 필요
+* **cin.getline()은 char**서 쓰지만, **getline()은 string**에서 쓴다. 이게 훨씬 좋음!!
+  * getline()은 getline(cin, 문자열) 형식으로 사용
+  * 그리고 +연산자로 문자열 연결 가능
+  * **또 if(singer == elvis) // 문자열 비교 바로 가능!! (C에서는 주소로 왔던거 기억날 것인데, char[]이였기 때문이다)**
 
-그럼 만약 cstring파일에 strcpy() 코드가 들어있다? 
-=> 아님 원형이 선언되어 있는것임.
-그러면 strcpy() 함수의 코드는 어디에 있는가?
-=> strcpy() 함수의 코드는 컴파일된 바이너리 코드로, 비주얼 스튜디오가 
-     설치된 lib 폴더에 libcmt.lib 파일에 들어 있고, 링크 시에 strcpy() 함수의 코드가 exe에 들어간다.
-그러면 헤더 파일은 왜 사용되는가? 
-=> 사용자 프로그램에서 strcpy() 함수를 호출하는 구문이 정확한지 
-     확인하기 위해 컴파일러에 의해 필요
+* C++헤더파일은 확장자가 없다. \<cstring>, \<string>
+  * **#include <헤더파일> 이면 기존 제공하는** 헤더파일 위치이다.
+  * **#include "헤더파일" 은 사용자 정의** 헤더파일 위치이다.
 
-=====================================================
+<br>
 
-### 3장:: 클래스와 객체
+**라이브러리 내부 동작 질문??**
 
-**객체**는 상태와 행동으로 구성
+그럼 cstring파일에 strcpy() 코드가 들어있다는것이냐??  
+=> 아님. 함수 원형이 선언되어 있는것임.
+
+그러면 strcpy() 함수의 코드는 어디에 있는가??  
+=> strcpy() 함수의 코드는 컴파일된 바이너리 코드로, 비주얼 스튜디오가 설치된 lib 폴더에 libcmt.lib 파일에 들어 있고, 링크 시에 strcpy() 함수의 코드가 exe에 들어간다.
+
+그러면 헤더 파일은 왜 사용되는가??  
+=> 사용자 프로그램에서 strcpy() 함수를 호출하는 구문이 정확한지 확인하기 위해 컴파일러에 의해 필요
+
+<br><br>
+
+## 3장:: 클래스와 객체
+
+**`객체`는 상태와 행동으로 구성!! 클래스를 통해서 객체 생성!! (인스턴스!!)**
 
 **클래스 선언부**와 **클래스 구현부**로 나뉜다. 클래스 구현부는 클래스 바깥부분.
-EX)
+
+```c++
 class Circle {
 public:
 	int radius;
 	double getArea();
-}; => 선언부이기 때문에 세미콜론 까먹지 말기.
+}; // => 선언부이기 때문에 세미콜론 까먹지 말기.
 double Circle::getArea() {
 	return radius * radius * 3.14;
-}
+} // 클래스 구현부
+```
 
-그런데 여기서 함수 구현부분이 한줄 들어가는거면 클래스 선언부에 그냥 바로 작성
-하는것을 교수님은 추천하신다.(간단한 부분만)
+* 그런데 여기서 함수 구현부분이 한줄 들어가는거면 클래스 선언부에 그냥 바로 작성  
+  하는것을 교수님은 추천하신다.(간단한 부분만)
 
-**생성자가 다른 생성자 호출(위임 생성자) 이부분 기억만 해두기 => 코드의 간소화**
-=> Circle::Circle() : Circle(1) {} // 위임 생성자 => 클래스 구현부 부분임.
-     Circle::Circle(int r) {코드~~} // 타겟 생성자 (r에 1 전달) => 클래스 구현부 부분임.
+<br>
+
+**생성자가 다른 생성자 호출(위임 생성자) 이부분 기억만 해두기 => 코드의 간소화**  
+
+```c++
+Circle::Circle() : Circle(1) {} // 위임 생성자  => 클래스 구현부 부분임.
+Circle::Circle(int r) {코드~~} // 타겟 생성자 (r에 1 전달) => 클래스 구현부 부분임.
+```
+
+* 예로 `Circle()` 로 호출시 위임 생성자이므로 `Circle(int r)` 부분인 타겟 생성자가 호출된다.
+
+<br>
 
 **다양한 생성자의 멤버 변수 초기화 방법들 알아두기.**
-=> 1번은 우리가 항상 하던방식(생성자 코드에서)
-=> 2번은 Point::Point() : x(0), y(0) {} // 멤버 변수 x, y를 0으로 초기화.(생성자 서두에서)
-=> 3번은 class Point{ int x=0; y=0; public: ...}; // 클래스 선언부에서 x,y를 0으로 초기화(클래스 선언부에서)
-=> 3번은 추천x
+
+* 1번은 우리가 항상 하던 일반적인 방식(생성자 코드에서)
+* 2번은 `Point::Point() : x(0), y(0) {}` 로 멤버 변수 x, y를 0으로 초기화.(생성자 서두에서)
+* 3번은 `class Point{ int x=0; y=0; public: ...}` 로 클래스 선언부에서 x,y를 0으로 초기화(클래스 선언부에서)
+  * 3번은 추천x
+
+<br>
 
 **소멸자?? EX) Circle::~Circle() {...}**
-=> 객체가 소멸되는 시점에서 자동으로 호출되는 함수
- 핵심은 동적으로 할당 받은 메모리 해제, 파일 저장 및 닫기, 네트워크 닫기
- **핵심은 중복 불가능, 매개 변수 없는 함수**
- **핵심은 소멸자가 선언되어 있지 않으면 기본 소멸자가 자동 생성(생성자도 마찬가지)**
 
-**함수는 main이 먼저이고, 전역 객체있을경우 전역 먼저 실행!!**
+* 객체가 소멸되는 시점에서 자동으로 호출되는 함수
+* **핵심**
+  * 동적으로 할당 받은 메모리 해제, 파일 저장 및 닫기, 네트워크 닫기
+  * 중복 불가능, 매개 변수 없는 함수
+  * 소멸자가 선언되어 있지 않으면 **기본 소멸자가 자동 생성(생성자도 마찬가지)**
 
-**소멸자는 리턴될때 순서가 반대로 나옴,,(스택의 영향)**
-**=> 소멸은 그림으로 생각하면 당연히 지역 객체보다 전역 객체부분이 마지막이겠죠?**
+* **생성은?**
+  * 함수는 main이 먼저이고, 전역 객체있을경우 전역 먼저 실행!!
 
-접근 지정자 => 캡슐화
+* **소멸은?**
+  * 소멸자는 리턴될때 순서가 반대로 나옴,,(스택의 영향)  
+    => 소멸을 그림으로 생각하면 당연히 지역 객체보다 전역 객체부분이 마지막
+
+<br>
+
+**접근 지정자 => 캡슐화**  
 **=> private, public, protected : 멤버에 대한 3가지 접근 지정자**
-여기서 만약 아무것도 안적으면 private로 기본 지정 되어있는 것이다.
-그래서 클래스 만들때 마다 public:을 해줬다.
 
-자바는 모든게 클래스이다. C와 다르다. 
-**C는 전역 객체 생성시 자동으로 static이 붙는것이다.**
-**따라서 메인함수가 실행되기전 먼저 메모리 할당을 받는다.**
+* `private`로 기본 지정
+* 그래서 클래스 만들때 마다 `public:` 을 해줬었다.
 
-context change => 함수 호출에 따른 시간 오버헤드
-안에 내용을 암기할 필요는 x
+<br>
 
-**함수 호출에 따른 시간 오버헤드가 심각한 사례에 좋은 인라인 함수**
-**inline 함수 => 코드를 확장 삽입!!!**
-=> 함수 호출에 따른 오버헤드 존재하지 않음
-**=> 인라인 함수를 호출하는 곳에 인라인 함수 코드를 확장 삽입!!**
-=> 자주 호출되는 짧은 코드의 함수 호출에 대한 시간 소모를 줄임.
-=> recursion, 긴 함수, static, 반복문, goto 문 등을 가진 함수는 수용하지 않음.
+**자바는 모든게 클래스이다. C와 다르다.**   
+**C는 전역 객체 생성시 자동으로 `static`이 붙는것이다.**  
+**따라서 메인함수가 실행되기전 먼저 `메모리 할당`을 받는다.**
 
-**자동 인라인 함수 : 클래스 선언부에 구현된 멤버 함수(컴파일러가 자동 인라인)**
-=> class 안에 생성자나, 함수안의 코드를 싹다 넣는 경우와 => 이 경우가 자동 인라인
-     class 안에 선언만 하고, 밖에 코드를 구현 하는 경우 => 자동인라인이 아님. 구현부 앞에 inline int...이런식으로 inline 기입!!
-     inline 제약 사항또한 자동인라인에도 적용
+<br>
 
-**구조체 시작~!!**
-C++구조체와 클래스는 거희 완벽히 동일..
-C++언어의 struct와 C언어의 struct는 C++이 C를 포함하는 구조다. '='이 아니다.
-C의 struct는 함수(행동)을 가질수 없다. 그러나, 클래스는 상태와 행동 둘다 가진다.
-구조체의 디폴트 접근 지정 – public
-클래스의 디폴트 접근 지정 – private
-structName stObj;		// (0), C++ 구조체 객체 생성
-struct structName stObj;	// (X), C 언어의 구조체 객체 생성
+**context change => 함수 호출에 따른 시간 오버헤드**
 
-**헤더 파일 이용시** 
-**=> 클래스 선언부 : 헤더파일에 저장.**
-     **클래스 구현부 : cpp 파일에 저장, 클래스가 선언된 헤더 파일 include**
+* **함수 호출에 따른 시간 오버헤드가 심각한 사례에 좋은 `인라인 함수`**
+  **inline 함수 => 코드를 확장 삽입!!!**
+  * 함수 호출에 따른 오버헤드 존재하지 않음
+  * **인라인 함수를 호출하는 곳에 인라인 함수 코드를 확장 삽입!!**
+  * 자주 호출되는 짧은 코드의 함수 호출에 대한 시간 소모를 줄임.
+  * recursion, 긴 함수, static, 반복문, goto 문 등을 가진 함수는 수용하지 않음.
 
-**main()에서는 헤더파일만 include해서 사용 가능함.(클래스선언부얘기)**
+* **`자동 인라인 함수` : 클래스 선언부에 구현된 멤버 함수(컴파일러가 자동 인라인)**
+  * class 안에 생성자나, 함수안의 코드를 싹다 넣는 경우와 => 이 경우가 자동 인라인
+  *  class 안에 선언만 하고, 밖에 코드를 구현 하는 경우 => 자동인라인이 아님.   
+    구현부 앞에 `inline int...`이런식으로 inline 기입!!
+  * inline 제약 사항 또한 자동 인라인에도 적용
 
-**헤더 파일의 중복 include 문제는 int a=5; 선언후 int a=6; 선언한 경우와 비슷**
-**=> 해결법은 암기 할 수 밖에 없다.**
-     **#ifndef ... #define ...	#endif 는 헤더파일에 거희 항상 붙여주면서 외우자.**
+<br>
 
-핵심은 파일을 나눠서 코드를 작성하지만, include 할때마다 위에 그 코드가 적혀있다고 생각
+**구조체~!!**
 
-#### 예제 ::
+* C++구조체와 클래스는 거희 완벽히 동일..
+  * C++언어의 struct와 C언어의 struct는 C++이 C를 포함하는 구조다. '='은 아니다.
+* C의 struct는 함수(행동)을 가질수 없다. 그러나, 클래스는 상태와 행동 둘다 가진다.
+* 디폴트 접근 지정자(구조체, 클래스)는??
+  * 구조체의 디폴트 접근 지정 – public
+  * 클래스의 디폴트 접근 지정 – private
+* C++, C의 구조체 객체 생성 차이점
+  * `structName stObj;`		// (0), C++ 구조체 객체 생성
+  * `struct structName stObj;`	// (X), C 언어의 구조체 객체 생성
+
+<br>
+
+**헤더 파일 이용시**   
+
+* 클래스 선언부 : 헤더 파일에 저장.
+* 클래스 구현부 : cpp 파일에 저장, 클래스가 선언된 헤더 파일 include
+* main()에서는 헤더파일만 include해서 사용 가능함.(클래스선언부얘기)
+* 헤더 파일의 중복 include 문제는 int a=5; 선언후 int a=6; 선언한 경우와 비슷  
+  **=> 해결법은 암기 할 수 밖에 없다.**
+  * **#ifndef ... #define ...	#endif 는 헤더파일에 거희 항상 붙여주면서 외우자.**
+
+* **핵심은 파일을 나눠서 코드를 작성하지만, include 할때마다 위에 그 코드가 적혀있다고 생각**
+
+<br>
+
+### 예제 ::
 
 **예제 3-2(실습) – Rectangle 클래스 만들기**
 
@@ -229,6 +283,8 @@ int main() {
 => 사각형의 면적은 15
 ```
 
+<br>
+
 **예제 3-5 멤버변수의 초기화와 위임 생성자 활용**
 
 ```C++
@@ -250,12 +306,14 @@ Point::Point(int a, int b) // 타겟 생성자
 int main() {
 	Point origin;
 	Point target(10, 20);
-	origin.show();
+	origin.show(); // 
 	target.show();
 }
 => (0, 0)
 (10, 20)
 ```
+
+<br>
 
 **예제 3-8 지역 객체와 전역 객체의 생성 및 소멸순서**
 
@@ -313,6 +371,8 @@ int main() {
 반지름 1000 원 소멸
 ```
 
+<br>
+
 **예제 3-9 다음 소스의 컴파일 오류가 발생하는 곳은 어디인가?**
 
 ```C++
@@ -347,46 +407,63 @@ int main() {
      main()에서 호출할 수 없다.
 ```
 
-### 4장:: 객체 포인터, 객체 배열, 객체 동적생성
+<br><br>
 
-**배열은 매개 변수 없는 생성자 호출! 매개 변수 있는 생성자를 호출할 수 없음**
-=> 소멸자 또한 반대로 출력!!!(생성의 순서 반대)
+## 4장:: 객체 포인터, 객체 배열, 객체 동적생성
 
 **동적 메모리 할당 및 반환 => 실행 중에 운영체제로부터 할당 받음**
-C언어 동적 메모리 할당 : malloc()/free() => heap
-**C++은 new 연산자, delete 연산자 => heap**
-**new 할시 힙 메모리로부터 객체를 위한 메모리 할당 요청 후 객체 할당 시 생성자 호출**
-**delete 할시 new로 할당 받은 메모리 반환 후 소멸자 호출 뒤 객체를 힙에 반환**
-사용 형식 : **int *p = new int;** // 배열이면 뒤에 [], 동적 할당 시 초기화면 뒤에 (30)
 
-delete p;라고 해서 p가 사라지는게 아니라 *p가 사라진다. 즉 찌끄래기만 남아있다.
-따라서 포인터 p는 살아있다.
-delete는 해줘야 하는데 두번 연속하면 프로그램 펑.. 
-**delete p; 하고 p = null; 해두는게 좋긴하다.**
-배열 delete는 delete []p; 이런 형식으로 
-=> 만약 그냥 delete p; 할시 컴파일 오류는 아니지만 비정상적인 반환(반대도 동일)
+* **C언어 동적 메모리 할당 : malloc()/free() => heap**
 
-**동적 메모리 할당과 메모리 누수**
-=> 프로그램이 종료되면, 운영체제는 누수 메모리를 모두 힙에 반환
+* **C++은 new 연산자, delete 연산자 => heap**
 
-**this와 객체(this 포인터 즉 주소느낌, 객체는? 객체.함수 *p느낌)**
+  * `new` 할시 힙 메모리로부터 객체를 위한 메모리 할당 요청 후 객체 할당 시 생성자 호출
 
-- 멤버 함수가 아닌 함수에서 this 사용 불가 -> 객체와의 관련성이 없기 때문
+  * `delete` 할시 new로 할당 받은 메모리 반환 후 소멸자 호출 뒤 객체를 힙에 반환
+
+  * **사용 형식**
+
+    ```c++
+    int *p = new int[n]; // n 크기 동적 배열
+    int *p = new int(n); // n 값으로 동적 할당
+    ```
+
+* `delete p;` 라고 해서 p가 사라지는게 아니라 *p가 사라진다. 즉 찌끄래기만 남아있다.  
+  **=> 따라서 포인터 p는 살아있다.**
+  * `delete` 는 해줘야 하는데 두번 연속하면 프로그램 펑.. .
+  * **`delete p;` 하고 `p = null;` 해두는게 좋다.**
+    * 배열 delete는 delete []p; 이런 형식으로   
+      => 만약 그냥 delete p; 할시 컴파일 오류는 아니지만 비정상적인 반환(반대도 동일)
+* **동적 메모리 할당과 메모리 누수**  
+  => 프로그램이 종료되면, 운영체제는 누수 메모리를 모두 힙에 반환
+
+<br>
+
+**this와 객체(`this` 포인터 즉 주소느낌, 객체는? `객체.함수` 로써 *p느낌)**
+
+- **멤버 함수가 아닌 함수에서 this 사용 불가** -> 객체와의 관련성이 없기 때문
 - **static 멤버 함수에서 this 사용 불가** -> 객체가 생기기 전에 static 함수 호출이 있을 수 있기 때문
-멤버 변수는 instance로 만들었을때 클래스 안에 있는 편
-static은 class 전체 즉 instance전체에 하나 만들어진다.(공용)
+  - 멤버 변수는 instance로 만들었을때 클래스 안에 있는 반면,
+  - static은 class 전체 즉 instance전체에 하나 만들어진다.(공용)
 
-String 클래스를 이용한 문자열
-=> 가변 크기의 문자열
-stoi() 함수 => 문자열 숫자 변환
 
-String 또한 동적 생성/반환 가능 -> new/delete
-.find('+', startindex)함수는 찾으면 위치 알려주고, 못찾으면 -1을 리턴
-.substr()함수는 갯수 안적혀 있으면 끝까지 라는 의미
-getline(cin, s, '\n')함수는 \n나올때까지 입력받음
-cin.ignore(); 은 &문자뒤에 엔터키 지우기위해
+<br>
 
-#### 예제 ::
+**String 클래스를 이용한 문자열**  
+
+* 가변 크기의 문자열
+* String 또한 동적 생성/반환 가능 -> new/delete
+
+* 함수들 다양함
+  * stoi() 함수 => 문자열을 정수로 변환
+  * .find('+', startindex)함수는 찾으면 위치 알려주고, 못찾으면 -1을 리턴
+  * .substr() 함수는 갯수 안적혀 있으면 끝까지 슬라이싱
+  * getline(cin, s, '\n')함수는 \n나올때까지 입력받음
+  * cin.ignore(); 은 문자뒤에 엔터키 지우기 위해(버퍼 비우기)
+
+<br>
+
+### 예제 ::
 
 **예제 4-3 객체 배열 초기화**
 
@@ -415,6 +492,8 @@ Circle 0의 면적은 314
 Circle 1의 면적은 1256
 Circle 2의 면적은 3.14
 ```
+
+<br>
 
 **예제 4-7 Circle 객체의 동적 생성 및 반환**
 
@@ -459,6 +538,8 @@ int main() {
 소멸자 실행 radius = 30
 ```
 
+<br>
+
 **예제 4-10 객체 배열의 동적 생성과 반환 응용**
 
 ```C++
@@ -498,6 +579,8 @@ int main() {
 면적이 100에서 200 사이인 원의 개수는 2
 ```
 
+<br>
+
 **예제 4-12~4-15 string관련 - string 배열 선언과 문자열 키 입력 응용**
 
 ```C++
@@ -529,6 +612,8 @@ int main() {
 이름 >> Hwang Su hee
 사전에서 가장 뒤에 나오는 문자열은 Lee Jae Moon
 ```
+
+<br>
 
 **예제 4-13~4-15 string관련 - 문자열을 입력 받고 회전시키기**
 
@@ -565,6 +650,8 @@ ouI love y
 uI love yo
 I love you
 ```
+
+<br>
 
 **예제 4-14~4-15 string관련 - 문자열 처리 응용 - 덧셈 문자열을 입력 받아 덧셈 실행**
 
@@ -607,6 +694,8 @@ int main() {
 숫자들의 합은 231
 ```
 
+<br>
+
 **예제 4-15~4-15 string관련 - 문자열 find 및 replace**
 
 ```C++
@@ -646,7 +735,10 @@ It's Right Now or never, come hold me tight. Kiss me my darling, be mine tonight
 Tomorrow will be too late. It's Right Now or never, my love won't wait
 ```
 
+<br><br>
+
 ### 5장:: 함수와 참조-복사 생성자
+
 call by value 
 call by adress - this
 call by reference  // 참조
